commit bilingual contents

--- a/docs/visual-basic/misc/bc30337.md
+++ b/docs/visual-basic/misc/bc30337.md
@@ -1,5 +1,5 @@
 ---
-title: "'For' variabile di controllo del ciclo non può essere di tipo '<type>'"
+title: La variabile di controllo del ciclo ' for ' non può essere di tipo ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30337
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30337
 ms.assetid: 988bba15-e9a2-4045-98a0-7f53c8b2c3e3
-ms.openlocfilehash: fa824f4fa7c219f2ec22fb0d47d08d99727c7684
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: da7fbf982c4bb53444a96ea8f4ecf12843eedc9c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663791"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414142"
 ---
-# <a name="for-loop-control-variable-cannot-be-of-type-type"></a><span data-ttu-id="9968f-102">'For' variabile di controllo del ciclo non può essere di tipo '\<tipo >'</span><span class="sxs-lookup"><span data-stu-id="9968f-102">'For' loop control variable cannot be of type '\<type>'</span></span>
-<span data-ttu-id="9968f-103">Si è provato a usare una variabile di controllo del ciclo di tipo non valido.</span><span class="sxs-lookup"><span data-stu-id="9968f-103">You have attempted to use a loop control variable that is not a valid type.</span></span> <span data-ttu-id="9968f-104">All'inizio di un ciclo `For` , il punto iniziale, il punto finale e il valore dell'incremento vengono valutati in ordine testuale.</span><span class="sxs-lookup"><span data-stu-id="9968f-104">At the beginning of a `For` loop, the start point, the end point, and the step value are evaluated in textual order.</span></span> <span data-ttu-id="9968f-105">Tutte e tre le espressioni devono essere convertibili in modo implicito nel tipo della variabile.</span><span class="sxs-lookup"><span data-stu-id="9968f-105">All three expressions must be implicitly convertible to the type of the variable.</span></span> <span data-ttu-id="9968f-106">Se la variabile del ciclo `For` è di tipo `Object`, in fase di esecuzione almeno una delle espressioni deve essere di tipo numerico e a tutte e tre deve poter essere assegnato il tipo numerico più ampio.</span><span class="sxs-lookup"><span data-stu-id="9968f-106">If the `For` loop variable is of type `Object`, then at least one of the expressions at run time must be of a numeric type, and all three expressions must be coercible to the widest numeric type among them.</span></span>  
+# <a name="for-loop-control-variable-cannot-be-of-type-type"></a><span data-ttu-id="4ee32-102">La variabile di controllo del ciclo ' for ' non può essere di tipo ' \<type> '</span><span class="sxs-lookup"><span data-stu-id="4ee32-102">'For' loop control variable cannot be of type '\<type>'</span></span>
+<span data-ttu-id="4ee32-103">Si è provato a usare una variabile di controllo del ciclo di tipo non valido.</span><span class="sxs-lookup"><span data-stu-id="4ee32-103">You have attempted to use a loop control variable that is not a valid type.</span></span> <span data-ttu-id="4ee32-104">All'inizio di un ciclo `For` , il punto iniziale, il punto finale e il valore dell'incremento vengono valutati in ordine testuale.</span><span class="sxs-lookup"><span data-stu-id="4ee32-104">At the beginning of a `For` loop, the start point, the end point, and the step value are evaluated in textual order.</span></span> <span data-ttu-id="4ee32-105">Tutte e tre le espressioni devono essere convertibili in modo implicito nel tipo della variabile.</span><span class="sxs-lookup"><span data-stu-id="4ee32-105">All three expressions must be implicitly convertible to the type of the variable.</span></span> <span data-ttu-id="4ee32-106">Se la variabile del ciclo `For` è di tipo `Object`, in fase di esecuzione almeno una delle espressioni deve essere di tipo numerico e a tutte e tre deve poter essere assegnato il tipo numerico più ampio.</span><span class="sxs-lookup"><span data-stu-id="4ee32-106">If the `For` loop variable is of type `Object`, then at least one of the expressions at run time must be of a numeric type, and all three expressions must be coercible to the widest numeric type among them.</span></span>  
   
- <span data-ttu-id="9968f-107">**ID errore:** BC30337</span><span class="sxs-lookup"><span data-stu-id="9968f-107">**Error ID:** BC30337</span></span>  
+ <span data-ttu-id="4ee32-107">**ID errore:** BC30337</span><span class="sxs-lookup"><span data-stu-id="4ee32-107">**Error ID:** BC30337</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9968f-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9968f-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4ee32-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4ee32-108">To correct this error</span></span>  
   
-- <span data-ttu-id="9968f-109">Verificare il tipo di variabile di controllo del ciclo e cambiarlo con uno valido.</span><span class="sxs-lookup"><span data-stu-id="9968f-109">Check the type of the loop control variable and change it to a valid one.</span></span>  
+- <span data-ttu-id="4ee32-109">Verificare il tipo di variabile di controllo del ciclo e cambiarlo con uno valido.</span><span class="sxs-lookup"><span data-stu-id="4ee32-109">Check the type of the loop control variable and change it to a valid one.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9968f-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9968f-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4ee32-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4ee32-110">See also</span></span>
 
-- [<span data-ttu-id="9968f-111">Per... Istruzione Next (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="9968f-111">For...Next Statement (Visual Basic)</span></span>](../language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="9968f-112">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="9968f-112">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
-- [<span data-ttu-id="9968f-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="9968f-113">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="4ee32-111">Istruzione For...Next (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="4ee32-111">For...Next Statement (Visual Basic)</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="4ee32-112">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="4ee32-112">Do...Loop Statement</span></span>](../language-reference/statements/do-loop-statement.md)
+- [<span data-ttu-id="4ee32-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="4ee32-113">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
