--- a/docs/visual-basic/misc/bc30629.md
+++ b/docs/visual-basic/misc/bc30629.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30629
 ms.assetid: f4298ef7-85b1-4543-b764-4c3abda84baa
-ms.openlocfilehash: c8450b5de39958b7cbbfdeab4f292f9627e45e44
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 646a0c170404baf0eebda7326d664b6bd3e5a38e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646592"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415245"
 ---
-# <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a><span data-ttu-id="60ae5-102">Le strutture non possono dichiarare un elemento 'Sub New' non condiviso senza parametri</span><span class="sxs-lookup"><span data-stu-id="60ae5-102">Structures cannot declare a non-shared 'Sub New' with no parameters</span></span>
-<span data-ttu-id="60ae5-103">I costruttori`Sub New` dichiarati all'interno delle strutture devono accettare gli argomenti o essere dichiarati con il modificatore `Shared` .</span><span class="sxs-lookup"><span data-stu-id="60ae5-103">`Sub New` constructors declared within structures must either accept arguments or be declared with the `Shared` modifier.</span></span>  
+# <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a><span data-ttu-id="8214a-102">Le strutture non possono dichiarare un elemento 'Sub New' non condiviso senza parametri</span><span class="sxs-lookup"><span data-stu-id="8214a-102">Structures cannot declare a non-shared 'Sub New' with no parameters</span></span>
+<span data-ttu-id="8214a-103">I costruttori`Sub New` dichiarati all'interno delle strutture devono accettare gli argomenti o essere dichiarati con il modificatore `Shared` .</span><span class="sxs-lookup"><span data-stu-id="8214a-103">`Sub New` constructors declared within structures must either accept arguments or be declared with the `Shared` modifier.</span></span>  
   
- <span data-ttu-id="60ae5-104">**ID errore:** BC30629</span><span class="sxs-lookup"><span data-stu-id="60ae5-104">**Error ID:** BC30629</span></span>  
+ <span data-ttu-id="8214a-104">**ID errore:** BC30629</span><span class="sxs-lookup"><span data-stu-id="8214a-104">**Error ID:** BC30629</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="60ae5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="60ae5-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8214a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8214a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="60ae5-106">Modificare il costruttore `Sub New` in modo che accetti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="60ae5-106">Change the `Sub New` constructor so that it accepts arguments.</span></span>  
+- <span data-ttu-id="8214a-106">Modificare il costruttore `Sub New` in modo che accetti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="8214a-106">Change the `Sub New` constructor so that it accepts arguments.</span></span>  
   
-- <span data-ttu-id="60ae5-107">Applicare il modificatore `Shared` per rendere il costruttore condiviso.</span><span class="sxs-lookup"><span data-stu-id="60ae5-107">Apply the `Shared` modifier to make the constructor shared.</span></span>  
+- <span data-ttu-id="8214a-107">Applicare il modificatore `Shared` per rendere il costruttore condiviso.</span><span class="sxs-lookup"><span data-stu-id="8214a-107">Apply the `Shared` modifier to make the constructor shared.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="60ae5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="60ae5-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8214a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8214a-108">See also</span></span>
 
-- [<span data-ttu-id="60ae5-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="60ae5-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="60ae5-110">Strutture</span><span class="sxs-lookup"><span data-stu-id="60ae5-110">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+- [<span data-ttu-id="8214a-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="8214a-109">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="8214a-110">Strutture</span><span class="sxs-lookup"><span data-stu-id="8214a-110">Structures</span></span>](../programming-guide/language-features/data-types/structures.md)
