--- a/docs/visual-basic/misc/bc30667.md
+++ b/docs/visual-basic/misc/bc30667.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30667
 ms.assetid: 583e231f-a4c9-47aa-ae37-7bac43b0b318
-ms.openlocfilehash: 27a9084292c99a7aee19aca64acb500b78dadb7c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a0c682a07c2e445eaba09aac4b0a728207f893ea
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657977"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414920"
 ---
-# <a name="paramarray-parameters-must-be-declared-byval"></a><span data-ttu-id="d1cda-102">I parametri ParamArray devono essere dichiarati come 'ByVal'</span><span class="sxs-lookup"><span data-stu-id="d1cda-102">ParamArray parameters must be declared 'ByVal'</span></span>
-<span data-ttu-id="d1cda-103">I parametri`ParamArray` non possono usare il modificatore `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="d1cda-103">`ParamArray` parameters cannot use the `ByRef` modifier.</span></span>  
+# <a name="paramarray-parameters-must-be-declared-byval"></a><span data-ttu-id="4433a-102">I parametri ParamArray devono essere dichiarati come 'ByVal'</span><span class="sxs-lookup"><span data-stu-id="4433a-102">ParamArray parameters must be declared 'ByVal'</span></span>
+<span data-ttu-id="4433a-103">I parametri`ParamArray` non possono usare il modificatore `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="4433a-103">`ParamArray` parameters cannot use the `ByRef` modifier.</span></span>  
   
- <span data-ttu-id="d1cda-104">**ID errore:** BC30667</span><span class="sxs-lookup"><span data-stu-id="d1cda-104">**Error ID:** BC30667</span></span>  
+ <span data-ttu-id="4433a-104">**ID errore:** BC30667</span><span class="sxs-lookup"><span data-stu-id="4433a-104">**Error ID:** BC30667</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d1cda-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d1cda-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4433a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4433a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="d1cda-106">Dichiarare i parametri `ParamArray` con il modificatore `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="d1cda-106">Declare `ParamArray` parameters using the `ByVal` modifier.</span></span>  
+- <span data-ttu-id="4433a-106">Dichiarare i parametri `ParamArray` con il modificatore `ByVal` .</span><span class="sxs-lookup"><span data-stu-id="4433a-106">Declare `ParamArray` parameters using the `ByVal` modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d1cda-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d1cda-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4433a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4433a-107">See also</span></span>
 
-- [<span data-ttu-id="d1cda-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="d1cda-108">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="d1cda-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="d1cda-109">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
-- [<span data-ttu-id="d1cda-110">ByVal</span><span class="sxs-lookup"><span data-stu-id="d1cda-110">ByVal</span></span>](../../visual-basic/language-reference/modifiers/byval.md)
+- [<span data-ttu-id="4433a-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="4433a-108">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="4433a-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="4433a-109">ByRef</span></span>](../language-reference/modifiers/byref.md)
+- [<span data-ttu-id="4433a-110">ByVal</span><span class="sxs-lookup"><span data-stu-id="4433a-110">ByVal</span></span>](../language-reference/modifiers/byval.md)
