--- a/docs/visual-basic/misc/bc30683.md
+++ b/docs/visual-basic/misc/bc30683.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30683
 ms.assetid: da619562-f39d-44fa-bed0-a3df02636fb0
-ms.openlocfilehash: 97feb09f3fba6041498b7a9de9be531fc9916790
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: bae1c4b5f35fcc96b545e16d3c205f48b8adfb4e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664846"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414090"
 ---
-# <a name="inherits-statement-must-precede-all-declarations-in-a-class"></a><span data-ttu-id="3793d-102">L'istruzione 'Inherits' deve precedere tutte le dichiarazioni in una classe</span><span class="sxs-lookup"><span data-stu-id="3793d-102">'Inherits' statement must precede all declarations in a class</span></span>
-<span data-ttu-id="3793d-103">Le istruzioni `Inherits` devono trovarsi all'inizio delle definizioni di classe.</span><span class="sxs-lookup"><span data-stu-id="3793d-103">The `Inherits` statements must be at the beginning of class definitions.</span></span>  
+# <a name="inherits-statement-must-precede-all-declarations-in-a-class"></a><span data-ttu-id="57222-102">L'istruzione 'Inherits' deve precedere tutte le dichiarazioni in una classe</span><span class="sxs-lookup"><span data-stu-id="57222-102">'Inherits' statement must precede all declarations in a class</span></span>
+<span data-ttu-id="57222-103">Le istruzioni `Inherits` devono trovarsi all'inizio delle definizioni di classe.</span><span class="sxs-lookup"><span data-stu-id="57222-103">The `Inherits` statements must be at the beginning of class definitions.</span></span>  
   
- <span data-ttu-id="3793d-104">**ID errore:** BC30683</span><span class="sxs-lookup"><span data-stu-id="3793d-104">**Error ID:** BC30683</span></span>  
+ <span data-ttu-id="57222-104">**ID errore:** BC30683</span><span class="sxs-lookup"><span data-stu-id="57222-104">**Error ID:** BC30683</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3793d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3793d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="57222-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="57222-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3793d-106">Spostare l'istruzione `Inherits` all'inizio della classe.</span><span class="sxs-lookup"><span data-stu-id="3793d-106">Move the `Inherits` statement to the top of your class.</span></span>  
+- <span data-ttu-id="57222-106">Spostare l'istruzione `Inherits` all'inizio della classe.</span><span class="sxs-lookup"><span data-stu-id="57222-106">Move the `Inherits` statement to the top of your class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3793d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3793d-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="57222-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="57222-107">See also</span></span>
 
-- [<span data-ttu-id="3793d-108">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="3793d-108">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
-- [<span data-ttu-id="3793d-109">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="3793d-109">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="57222-108">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="57222-108">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="57222-109">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="57222-109">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
