--- a/docs/visual-basic/misc/bc30705.md
+++ b/docs/visual-basic/misc/bc30705.md
@@ -1,5 +1,5 @@
 ---
-title: L'oggetto '<objectname>' a cui si fa riferimento ha valore ' Nothing '
+title: L'oggetto '<objectname>' a cui si fa riferimento ha valore 'Nothing'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30705
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30705
 ms.assetid: 7c14aec2-26ef-429f-8412-9f9ec74529cb
-ms.openlocfilehash: a34708e67650ab79033b108a7aabef3f2bb6e5c5
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: ed5acee191ba02d71bc2c89a1166101c4e07f46c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197991"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412624"
 ---
-# <a name="referenced-object-objectname-has-a-value-of-nothing"></a><span data-ttu-id="490c3-102">L'oggetto '\<ObjectName >' a cui viene fatto riferimento ha valore ' Nothing '</span><span class="sxs-lookup"><span data-stu-id="490c3-102">Referenced object '\<objectname>' has a value of 'Nothing'</span></span>
-<span data-ttu-id="490c3-103">L'oggetto a cui si fa riferimento non è stato impostato o è stato impostato sul valore `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="490c3-103">The object being referenced has not been set, or has been set to the value `Nothing`.</span></span>  
+# <a name="referenced-object-objectname-has-a-value-of-nothing"></a><span data-ttu-id="addde-102">L'oggetto '\<objectname>' a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="addde-102">Referenced object '\<objectname>' has a value of 'Nothing'</span></span>
+<span data-ttu-id="addde-103">L'oggetto a cui si fa riferimento non è stato impostato o è stato impostato sul valore `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="addde-103">The object being referenced has not been set, or has been set to the value `Nothing`.</span></span>  
   
- <span data-ttu-id="490c3-104">**ID errore:** BC30705</span><span class="sxs-lookup"><span data-stu-id="490c3-104">**Error ID:** BC30705</span></span>  
+ <span data-ttu-id="addde-104">**ID errore:** BC30705</span><span class="sxs-lookup"><span data-stu-id="addde-104">**Error ID:** BC30705</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="490c3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="490c3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="addde-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="addde-105">To correct this error</span></span>  
   
-- <span data-ttu-id="490c3-106">Verificare che il nome dell'oggetto sia digitato correttamente e che l'oggetto sia stato impostato.</span><span class="sxs-lookup"><span data-stu-id="490c3-106">Verify that the name of object is spelled correctly, and that the object has been set.</span></span>  
+- <span data-ttu-id="addde-106">Verificare che il nome dell'oggetto sia digitato correttamente e che l'oggetto sia stato impostato.</span><span class="sxs-lookup"><span data-stu-id="addde-106">Verify that the name of object is spelled correctly, and that the object has been set.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="490c3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="490c3-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="addde-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="addde-107">See also</span></span>
 
-- [<span data-ttu-id="490c3-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="490c3-108">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
-- [<span data-ttu-id="490c3-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="490c3-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
+- [<span data-ttu-id="addde-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="addde-108">Nothing</span></span>](../language-reference/nothing.md)
+- [<span data-ttu-id="addde-109">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="addde-109">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
