--- a/docs/visual-basic/misc/bc32074.md
+++ b/docs/visual-basic/misc/bc32074.md
@@ -7,42 +7,42 @@ f1_keywords:
 helpviewer_keywords:
 - BC32074
 ms.assetid: 3552ac98-d86a-4962-9d51-b9a8acc38ea1
-ms.openlocfilehash: bd13757cb9fb19f1f728f40114c8e5b288936bd2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5aea76a6079eeede54d9889b2e213c0c667b1cf6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64754574"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413739"
 ---
-# <a name="classes-that-are-generic-or-contained-in-a-generic-type-cannot-inherit-from-an-attribute-class"></a><span data-ttu-id="fecea-102">Le classi generiche o che sono contenute in un tipo generico non possono ereditare da una classe Attribute</span><span class="sxs-lookup"><span data-stu-id="fecea-102">Classes that are generic or contained in a generic type cannot inherit from an attribute class</span></span>
+# <a name="classes-that-are-generic-or-contained-in-a-generic-type-cannot-inherit-from-an-attribute-class"></a><span data-ttu-id="4e12a-102">Le classi generiche o che sono contenute in un tipo generico non possono ereditare da una classe Attribute</span><span class="sxs-lookup"><span data-stu-id="4e12a-102">Classes that are generic or contained in a generic type cannot inherit from an attribute class</span></span>
 
-<span data-ttu-id="fecea-103">Una classe generica o annidata all'interno di un tipo generico specifica che eredita da una classe Attribute.</span><span class="sxs-lookup"><span data-stu-id="fecea-103">A class that is either generic or nested within a generic type specifies that it inherits from an attribute class.</span></span>
+<span data-ttu-id="4e12a-103">Una classe generica o annidata all'interno di un tipo generico specifica che eredita da una classe Attribute.</span><span class="sxs-lookup"><span data-stu-id="4e12a-103">A class that is either generic or nested within a generic type specifies that it inherits from an attribute class.</span></span>
 
-<span data-ttu-id="fecea-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="fecea-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="fecea-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="fecea-105">This means the following limitations apply:</span></span>
+<span data-ttu-id="4e12a-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="4e12a-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="4e12a-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="4e12a-105">This means the following limitations apply:</span></span>
 
-- <span data-ttu-id="fecea-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="fecea-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
+- <span data-ttu-id="4e12a-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="4e12a-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
 
-- <span data-ttu-id="fecea-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="fecea-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
+- <span data-ttu-id="4e12a-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="4e12a-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
 
-- <span data-ttu-id="fecea-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="fecea-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
+- <span data-ttu-id="4e12a-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="4e12a-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
 
-  - <span data-ttu-id="fecea-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="fecea-109">A generic type,</span></span>
+  - <span data-ttu-id="4e12a-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="4e12a-109">A generic type,</span></span>
 
-  - <span data-ttu-id="fecea-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="fecea-110">A type constructed from a generic type,</span></span>
+  - <span data-ttu-id="4e12a-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="4e12a-110">A type constructed from a generic type,</span></span>
 
-  - <span data-ttu-id="fecea-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="fecea-111">A type parameter of a containing type, or</span></span>
+  - <span data-ttu-id="4e12a-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="4e12a-111">A type parameter of a containing type, or</span></span>
 
-  - <span data-ttu-id="fecea-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="fecea-112">A type constructed from a type parameter of a containing type.</span></span>
+  - <span data-ttu-id="4e12a-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="4e12a-112">A type constructed from a type parameter of a containing type.</span></span>
 
-<span data-ttu-id="fecea-113">**ID errore:** BC32074</span><span class="sxs-lookup"><span data-stu-id="fecea-113">**Error ID:** BC32074</span></span>
+<span data-ttu-id="4e12a-113">**ID errore:** BC32074</span><span class="sxs-lookup"><span data-stu-id="4e12a-113">**Error ID:** BC32074</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="fecea-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fecea-114">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="4e12a-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4e12a-114">To correct this error</span></span>
 
-- <span data-ttu-id="fecea-115">Modificare la classe base in un elemento diverso da una classe Attribute o rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="fecea-115">Change the base class to something other than an attribute class, or remove the `Inherits` statement entirely.</span></span>
+- <span data-ttu-id="4e12a-115">Modificare la classe base in un elemento diverso da una classe Attribute o rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="4e12a-115">Change the base class to something other than an attribute class, or remove the `Inherits` statement entirely.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="fecea-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fecea-116">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4e12a-116">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4e12a-116">See also</span></span>
 
 - <xref:System.Attribute>
-- [<span data-ttu-id="fecea-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="fecea-117">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="fecea-118">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="fecea-118">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [<span data-ttu-id="fecea-119">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="fecea-119">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="4e12a-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4e12a-117">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="4e12a-118">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="4e12a-118">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="4e12a-119">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="4e12a-119">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
