--- a/docs/visual-basic/misc/bc32086.md
+++ b/docs/visual-basic/misc/bc32086.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo generico '<generictypename>' non è possibile importare più volte
+title: Impossibile importare più volte il tipo generico '<generictypename>'
 ms.date: 07/20/2015
 f1_keywords:
 - BC32086
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32086
 ms.assetid: d93bae4b-3224-4a6e-a072-8ce231084519
-ms.openlocfilehash: 6df3acec967b8218af85d31d903d2fb342645207
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 888deb900afb5e639a642d5d9561a5473f648419
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783786"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358815"
 ---
-# <a name="generic-type-generictypename-cannot-be-imported-more-than-once"></a><span data-ttu-id="3d601-102">Tipo generico '\<nometipogenerico >' non è possibile importare più volte</span><span class="sxs-lookup"><span data-stu-id="3d601-102">Generic type '\<generictypename>' cannot be imported more than once</span></span>
-<span data-ttu-id="3d601-103">Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un tipo generico che è già stato importato con parametrizzazione di tipo diverso.</span><span class="sxs-lookup"><span data-stu-id="3d601-103">An [Imports Statement (.NET Namespace and Type)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a generic type that has already been imported with different type parameterization.</span></span>  
+# <a name="generic-type-generictypename-cannot-be-imported-more-than-once"></a><span data-ttu-id="95172-102">Impossibile importare più volte il tipo generico '\<generictypename>'</span><span class="sxs-lookup"><span data-stu-id="95172-102">Generic type '\<generictypename>' cannot be imported more than once</span></span>
+<span data-ttu-id="95172-103">Un' [istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un tipo generico che è già stato importato con parametrizzazione di tipo diverso.</span><span class="sxs-lookup"><span data-stu-id="95172-103">An [Imports Statement (.NET Namespace and Type)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifies a generic type that has already been imported with different type parameterization.</span></span>  
   
- <span data-ttu-id="3d601-104">È possibile dichiarare più tipi costruiti da un tipo generico perché la dichiarazione di un tipo costruito non ridefinisce il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="3d601-104">You can declare multiple constructed types from a generic type, because you do not redefine the generic type by declaring a constructed type.</span></span> <span data-ttu-id="3d601-105">Tuttavia, più importazioni di un tipo generico equivalgono a diverse definizioni.</span><span class="sxs-lookup"><span data-stu-id="3d601-105">However, if you import a generic type more than once, that is the equivalent of multiple definitions.</span></span>  
+ <span data-ttu-id="95172-104">È possibile dichiarare più tipi costruiti da un tipo generico perché la dichiarazione di un tipo costruito non ridefinisce il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="95172-104">You can declare multiple constructed types from a generic type, because you do not redefine the generic type by declaring a constructed type.</span></span> <span data-ttu-id="95172-105">Tuttavia, più importazioni di un tipo generico equivalgono a diverse definizioni.</span><span class="sxs-lookup"><span data-stu-id="95172-105">However, if you import a generic type more than once, that is the equivalent of multiple definitions.</span></span>  
   
- <span data-ttu-id="3d601-106">**ID errore:** BC32086</span><span class="sxs-lookup"><span data-stu-id="3d601-106">**Error ID:** BC32086</span></span>  
+ <span data-ttu-id="95172-106">**ID errore:** BC32086</span><span class="sxs-lookup"><span data-stu-id="95172-106">**Error ID:** BC32086</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3d601-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3d601-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="95172-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="95172-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="3d601-108">Se il file di origine che contiene questa istruzione `Imports` include un'altra istruzione `Imports` che specifica lo stesso tipo generico, rimuoverne una.</span><span class="sxs-lookup"><span data-stu-id="3d601-108">If the source file containing this `Imports` statement also contains another `Imports` statement specifying the same generic type, remove one of them.</span></span>  
+1. <span data-ttu-id="95172-108">Se il file di origine che contiene questa istruzione `Imports` include un'altra istruzione `Imports` che specifica lo stesso tipo generico, rimuoverne una.</span><span class="sxs-lookup"><span data-stu-id="95172-108">If the source file containing this `Imports` statement also contains another `Imports` statement specifying the same generic type, remove one of them.</span></span>  
   
-2. <span data-ttu-id="3d601-109">Se è necessario importare lo stesso tipo generico con altre parametrizzazioni di tipo, usare più file di origine.</span><span class="sxs-lookup"><span data-stu-id="3d601-109">If you need to import the same generic type with different type parameterizations, use multiple source files.</span></span>  
+2. <span data-ttu-id="95172-109">Se è necessario importare lo stesso tipo generico con altre parametrizzazioni di tipo, usare più file di origine.</span><span class="sxs-lookup"><span data-stu-id="95172-109">If you need to import the same generic type with different type parameterizations, use multiple source files.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3d601-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3d601-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="95172-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="95172-110">See also</span></span>
 
-- [<span data-ttu-id="3d601-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3d601-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="95172-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="95172-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
