--- a/docs/visual-basic/misc/bc32104.md
+++ b/docs/visual-basic/misc/bc32104.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC32104
 ms.assetid: f41a581b-afca-4173-bc82-b35ed49caba0
-ms.openlocfilehash: 4c9819d0164e048af4680a1e31eef6bd42e80fff
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4de7272579133f7ed194832a0668ea9ea798feaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618396"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413674"
 ---
-# <a name="class-constraint-and-structure-constraint-cannot-be-combined"></a><span data-ttu-id="0c3f3-102">Impossibile combinare il vincolo 'Class' e il vincolo 'Structure'</span><span class="sxs-lookup"><span data-stu-id="0c3f3-102">'Class' constraint and 'Structure' constraint cannot be combined</span></span>
-<span data-ttu-id="0c3f3-103">Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) che il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) .</span><span class="sxs-lookup"><span data-stu-id="0c3f3-103">A constraint list includes both the [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) constraint and the [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) constraint.</span></span>  
+# <a name="class-constraint-and-structure-constraint-cannot-be-combined"></a><span data-ttu-id="d6d91-102">Impossibile combinare il vincolo 'Class' e il vincolo 'Structure'</span><span class="sxs-lookup"><span data-stu-id="d6d91-102">'Class' constraint and 'Structure' constraint cannot be combined</span></span>
+<span data-ttu-id="d6d91-103">Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) che il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) .</span><span class="sxs-lookup"><span data-stu-id="d6d91-103">A constraint list includes both the [Class (Visual Basic)](../language-reference/statements/class-statement.md) constraint and the [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) constraint.</span></span>  
   
- <span data-ttu-id="0c3f3-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo `Class` ).</span><span class="sxs-lookup"><span data-stu-id="0c3f3-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the `Class` constraint).</span></span> <span data-ttu-id="0c3f3-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="0c3f3-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
+ <span data-ttu-id="d6d91-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo `Class` ).</span><span class="sxs-lookup"><span data-stu-id="d6d91-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must be a value type (with the `Structure` constraint) or must be a reference type (with the `Class` constraint).</span></span> <span data-ttu-id="d6d91-105">Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="d6d91-105">You cannot specify both constraints on the same type parameter, and you cannot specify either one more than once.</span></span>  
   
- <span data-ttu-id="0c3f3-106">**ID errore:** BC32104</span><span class="sxs-lookup"><span data-stu-id="0c3f3-106">**Error ID:** BC32104</span></span>  
+ <span data-ttu-id="d6d91-106">**ID errore:** BC32104</span><span class="sxs-lookup"><span data-stu-id="d6d91-106">**Error ID:** BC32104</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0c3f3-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0c3f3-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d6d91-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d6d91-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="0c3f3-108">Decidere se richiedere un tipo valore di tipo o un tipo riferimento per l'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="0c3f3-108">Decide whether you want to require a value type or a reference type for the type argument.</span></span>  
+1. <span data-ttu-id="d6d91-108">Decidere se richiedere un tipo valore di tipo o un tipo riferimento per l'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="d6d91-108">Decide whether you want to require a value type or a reference type for the type argument.</span></span>  
   
-    - <span data-ttu-id="0c3f3-109">Se si vuole che l'argomento di tipo sia un tipo valore, rimuovere la parola chiave `Class` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="0c3f3-109">If you want the type argument to be a value type, remove the `Class` keyword from the constraint list.</span></span>  
+    - <span data-ttu-id="d6d91-109">Se si vuole che l'argomento di tipo sia un tipo valore, rimuovere la parola chiave `Class` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="d6d91-109">If you want the type argument to be a value type, remove the `Class` keyword from the constraint list.</span></span>  
   
-    - <span data-ttu-id="0c3f3-110">Se si vuole che l'argomento di tipo sia un tipo riferimento, rimuovere la parola chiave `Structure` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="0c3f3-110">If you want the type argument to be a reference type, remove the `Structure` keyword from the constraint list.</span></span>  
+    - <span data-ttu-id="d6d91-110">Se si vuole che l'argomento di tipo sia un tipo riferimento, rimuovere la parola chiave `Structure` dall'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="d6d91-110">If you want the type argument to be a reference type, remove the `Structure` keyword from the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0c3f3-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0c3f3-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d6d91-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d6d91-111">See also</span></span>
 
-- [<span data-ttu-id="0c3f3-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0c3f3-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="0c3f3-113">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="0c3f3-113">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="d6d91-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d6d91-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="d6d91-113">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="d6d91-113">Value Types and Reference Types</span></span>](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
