--- a/docs/visual-basic/misc/bc30256.md
+++ b/docs/visual-basic/misc/bc30256.md
@@ -1,5 +1,5 @@
 ---
-title: "<error>: '<classname1>'eredita da'<classname2>'"
+title: <error>:' <classname1> ' eredita da' <classname2> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30256
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30256
 ms.assetid: 170a12ee-87ef-4a49-8c84-ebf57fac435e
-ms.openlocfilehash: 0a545bb1c44cba7bca81c2680950c95b5db38a1c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 58cc94ea8b456c462679f6c0331007ce54dfacff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64583617"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358958"
 ---
-# <a name="error-classname1-inherits-from-classname2"></a><span data-ttu-id="4e74a-102">\<errore >: '\<classname1 >' eredita da '\<classname2 >'</span><span class="sxs-lookup"><span data-stu-id="4e74a-102">\<error>: '\<classname1>' inherits from '\<classname2>'</span></span>
-<span data-ttu-id="4e74a-103">È stata rilevata una gerarchia di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="4e74a-103">A circular inheritance hierarchy has been detected.</span></span> <span data-ttu-id="4e74a-104">Una classe viene designata come classe che eredita da se stessa o da un'altra classe che eredita direttamente o indirettamente da essa.</span><span class="sxs-lookup"><span data-stu-id="4e74a-104">A class is designated as inheriting from itself, or from another class which directly or ultimately inherits from it.</span></span>  
+# <a name="error-classname1-inherits-from-classname2"></a><span data-ttu-id="fd252-102">\<error>:' \<classname1> ' eredita da' \<classname2> '</span><span class="sxs-lookup"><span data-stu-id="fd252-102">\<error>: '\<classname1>' inherits from '\<classname2>'</span></span>
+<span data-ttu-id="fd252-103">È stata rilevata una gerarchia di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="fd252-103">A circular inheritance hierarchy has been detected.</span></span> <span data-ttu-id="fd252-104">Una classe viene designata come classe che eredita da se stessa o da un'altra classe che eredita direttamente o indirettamente da essa.</span><span class="sxs-lookup"><span data-stu-id="fd252-104">A class is designated as inheriting from itself, or from another class which directly or ultimately inherits from it.</span></span>  
   
- <span data-ttu-id="4e74a-105">Questo messaggio può essere visualizzato più volte, per tracciare il percorso di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="4e74a-105">This message can appear more than once, to trace the circular inheritance path.</span></span>  
+ <span data-ttu-id="fd252-105">Questo messaggio può essere visualizzato più volte, per tracciare il percorso di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="fd252-105">This message can appear more than once, to trace the circular inheritance path.</span></span>  
   
- <span data-ttu-id="4e74a-106">**ID errore:** BC30256</span><span class="sxs-lookup"><span data-stu-id="4e74a-106">**Error ID:** BC30256</span></span>  
+ <span data-ttu-id="fd252-106">**ID errore:** BC30256</span><span class="sxs-lookup"><span data-stu-id="fd252-106">**Error ID:** BC30256</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4e74a-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4e74a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fd252-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fd252-107">To correct this error</span></span>  
   
-- <span data-ttu-id="4e74a-108">Interrompere la circolarità rimuovendo almeno un'istruzione `Inherits` nel percorso di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="4e74a-108">Break the circularity by removing at least one `Inherits` statement in the circular inheritance path.</span></span>  
+- <span data-ttu-id="fd252-108">Interrompere la circolarità rimuovendo almeno un'istruzione `Inherits` nel percorso di ereditarietà circolare.</span><span class="sxs-lookup"><span data-stu-id="fd252-108">Break the circularity by removing at least one `Inherits` statement in the circular inheritance path.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4e74a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4e74a-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fd252-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fd252-109">See also</span></span>
 
-- [<span data-ttu-id="4e74a-110">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="4e74a-110">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="fd252-110">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="fd252-110">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
