--- a/docs/visual-basic/misc/bc30257.md
+++ b/docs/visual-basic/misc/bc30257.md
@@ -1,5 +1,5 @@
 ---
-title: La classe<classname>'' non può ereditare da se stessa:<message>
+title: "Una classe '<classname>' non può ereditare da se stessa: <message>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30257
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC30257
 ms.assetid: 03e3034c-a0fa-4619-84b9-5bc9aa0dfe80
-ms.openlocfilehash: db1843d13efcec3762ab7be91f366ba68f279835
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: e35a2b8ad22498d273bee963cba514420a5a5175
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69665406"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358945"
 ---
-# <a name="class-classname-cannot-inherit-from-itself-message"></a><span data-ttu-id="64502-102">La classe\<' nomeclasse >' non può ereditare \<da se stessa: Message ></span><span class="sxs-lookup"><span data-stu-id="64502-102">Class '\<classname>' cannot inherit from itself: \<message></span></span>
-<span data-ttu-id="64502-103">Un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) nella definizione di una classe specifica la sua classe personale.</span><span class="sxs-lookup"><span data-stu-id="64502-103">An [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) in a class definition specifies its own class.</span></span>  
+# <a name="class-classname-cannot-inherit-from-itself-message"></a><span data-ttu-id="801c0-102">Una classe '\<classname>' non può ereditare da se stessa: \<message></span><span class="sxs-lookup"><span data-stu-id="801c0-102">Class '\<classname>' cannot inherit from itself: \<message></span></span>
+<span data-ttu-id="801c0-103">Un' [Inherits Statement](../language-reference/statements/inherits-statement.md) nella definizione di una classe specifica la sua classe personale.</span><span class="sxs-lookup"><span data-stu-id="801c0-103">An [Inherits Statement](../language-reference/statements/inherits-statement.md) in a class definition specifies its own class.</span></span>  
   
- <span data-ttu-id="64502-104">Una classe può ereditare da un'altra interfaccia, che le fornisce tutti i membri della classe dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri.</span><span class="sxs-lookup"><span data-stu-id="64502-104">A class can inherit from another class, which provides it with all the members of the class it inherits from, so it does not have to define those members again.</span></span> <span data-ttu-id="64502-105">Una classe di questo tipo è detta *classe derivata*e la classe da cui eredita è detta *classe base*.</span><span class="sxs-lookup"><span data-stu-id="64502-105">Such a class is called a *derived class*, and the class it inherits from is called the *base class*.</span></span>  
+ <span data-ttu-id="801c0-104">Una classe può ereditare da un'altra interfaccia, che le fornisce tutti i membri della classe dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri.</span><span class="sxs-lookup"><span data-stu-id="801c0-104">A class can inherit from another class, which provides it with all the members of the class it inherits from, so it does not have to define those members again.</span></span> <span data-ttu-id="801c0-105">Una classe di questo tipo è detta *classe derivata*e la classe da cui eredita è detta *classe base*.</span><span class="sxs-lookup"><span data-stu-id="801c0-105">Such a class is called a *derived class*, and the class it inherits from is called the *base class*.</span></span>  
   
- <span data-ttu-id="64502-106">Per una classe ereditare da se stessa non ha significato, perché possiede già tutti i suoi membri personali.</span><span class="sxs-lookup"><span data-stu-id="64502-106">It is meaningless for a class to inherit from itself, because it already possesses all its own members.</span></span>  
+ <span data-ttu-id="801c0-106">Per una classe ereditare da se stessa non ha significato, perché possiede già tutti i suoi membri personali.</span><span class="sxs-lookup"><span data-stu-id="801c0-106">It is meaningless for a class to inherit from itself, because it already possesses all its own members.</span></span>  
   
- <span data-ttu-id="64502-107">**ID errore:** BC30257</span><span class="sxs-lookup"><span data-stu-id="64502-107">**Error ID:** BC30257</span></span>  
+ <span data-ttu-id="801c0-107">**ID errore:** BC30257</span><span class="sxs-lookup"><span data-stu-id="801c0-107">**Error ID:** BC30257</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="64502-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="64502-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="801c0-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="801c0-108">To correct this error</span></span>  
   
-1. <span data-ttu-id="64502-109">Controllare l'ortografia del nome della classe nell'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="64502-109">Check the spelling of the class name in the `Inherits` statement.</span></span>  
+1. <span data-ttu-id="801c0-109">Controllare l'ortografia del nome della classe nell'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="801c0-109">Check the spelling of the class name in the `Inherits` statement.</span></span>  
   
-2. <span data-ttu-id="64502-110">Se non si intende ereditare da una classe diversa, rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="64502-110">If you do not intend to inherit from a different class, remove the `Inherits` statement entirely.</span></span>  
+2. <span data-ttu-id="801c0-110">Se non si intende ereditare da una classe diversa, rimuovere completamente l'istruzione `Inherits` .</span><span class="sxs-lookup"><span data-stu-id="801c0-110">If you do not intend to inherit from a different class, remove the `Inherits` statement entirely.</span></span>  
   
-3. <span data-ttu-id="64502-111">Esaminare il messaggio citato per ottenere suggerimenti.</span><span class="sxs-lookup"><span data-stu-id="64502-111">Examine the cited message for suggestions.</span></span>  
+3. <span data-ttu-id="801c0-111">Esaminare il messaggio citato per ottenere suggerimenti.</span><span class="sxs-lookup"><span data-stu-id="801c0-111">Examine the cited message for suggestions.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="64502-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="64502-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="801c0-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="801c0-112">See also</span></span>
 
-- [<span data-ttu-id="64502-113">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="64502-113">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="801c0-113">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="801c0-113">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
