--- a/docs/visual-basic/misc/bc30354.md
+++ b/docs/visual-basic/misc/bc30354.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30354
 ms.assetid: 8ce4ea75-6086-4d49-89c7-a04987ec7bee
-ms.openlocfilehash: 87e7ae594519599bdee278f652cca0d9a37bb29f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a070905fbb8fb708bf45c8670ade9bbc6eef4571
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663785"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414155"
 ---
-# <a name="interface-can-inherit-only-from-another-interface"></a><span data-ttu-id="ec8ec-102">L'interfaccia può ereditare solo da un'altra interfaccia</span><span class="sxs-lookup"><span data-stu-id="ec8ec-102">Interface can inherit only from another interface</span></span>
-<span data-ttu-id="ec8ec-103">Si è provato a ereditare da un elemento che non è un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="ec8ec-103">You have attempted to inherit from something that is not an interface.</span></span>  
+# <a name="interface-can-inherit-only-from-another-interface"></a><span data-ttu-id="b4f27-102">L'interfaccia può ereditare solo da un'altra interfaccia</span><span class="sxs-lookup"><span data-stu-id="b4f27-102">Interface can inherit only from another interface</span></span>
+<span data-ttu-id="b4f27-103">Si è provato a ereditare da un elemento che non è un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="b4f27-103">You have attempted to inherit from something that is not an interface.</span></span>  
   
- <span data-ttu-id="ec8ec-104">**ID errore:** BC30354</span><span class="sxs-lookup"><span data-stu-id="ec8ec-104">**Error ID:** BC30354</span></span>  
+ <span data-ttu-id="b4f27-104">**ID errore:** BC30354</span><span class="sxs-lookup"><span data-stu-id="b4f27-104">**Error ID:** BC30354</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ec8ec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ec8ec-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b4f27-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4f27-105">To correct this error</span></span>  
   
-- <span data-ttu-id="ec8ec-106">Accertarsi che le interfacce di base da cui si tenta di ereditare siano effettivamente delle interfacce.</span><span class="sxs-lookup"><span data-stu-id="ec8ec-106">Make sure that the base interface or interfaces from which you are attempting to inherit are actually interfaces.</span></span>  
+- <span data-ttu-id="b4f27-106">Accertarsi che le interfacce di base da cui si tenta di ereditare siano effettivamente delle interfacce.</span><span class="sxs-lookup"><span data-stu-id="b4f27-106">Make sure that the base interface or interfaces from which you are attempting to inherit are actually interfaces.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ec8ec-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ec8ec-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b4f27-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4f27-107">See also</span></span>
 
-- [<span data-ttu-id="ec8ec-108">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="ec8ec-108">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="ec8ec-109">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="ec8ec-109">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="b4f27-108">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="b4f27-108">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="b4f27-109">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="b4f27-109">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
