--- a/docs/visual-basic/misc/bc30519.md
+++ b/docs/visual-basic/misc/bc30519.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è riuscita perché la risoluzione dell'overload non accessibile '<method>' può essere chiamato senza una conversione di narrowing: <error>"
+title: "Risoluzione dell'overload non riuscita perché nessun '<method>' accessibile può essere chiamato senza una conversione verso un tipo di dati più piccolo: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30519
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30519
 ms.assetid: 3b3e724d-6fad-4146-b47d-6525493b2fa8
-ms.openlocfilehash: 72ea1c8b4da2b7042e343c4c7641a8082b15cf49
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1d87a15dafc6211a7473dec988a679d142e8e9e6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644485"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358932"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-without-a-narrowing-conversion-error"></a><span data-ttu-id="a020b-102">Non è riuscita perché la risoluzione dell'overload non accessibile '\<metodo >' può essere chiamato senza una conversione di narrowing: \<errore ></span><span class="sxs-lookup"><span data-stu-id="a020b-102">Overload resolution failed because no accessible '\<method>' can be called without a narrowing conversion: \<error></span></span>
-<span data-ttu-id="a020b-103">È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo che può essere chiamato senza una conversione verso un tipo di dati più piccolo.</span><span class="sxs-lookup"><span data-stu-id="a020b-103">You have made a call to an overloaded method, but the compiler cannot find a method that can be called without a narrowing conversion.</span></span> <span data-ttu-id="a020b-104">Una conversione verso un tipo di dati più piccolo imposta un valore su un tipo di dati che potrebbe non contenere esattamente alcuni dei possibili valori.</span><span class="sxs-lookup"><span data-stu-id="a020b-104">A narrowing conversion changes a value to a data type that might not be able to precisely hold some of the possible values.</span></span>  
+# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-without-a-narrowing-conversion-error"></a><span data-ttu-id="27bb2-102">Risoluzione dell'overload non riuscita perché nessun '\<method>' accessibile può essere chiamato senza una conversione verso un tipo di dati più piccolo: \<error></span><span class="sxs-lookup"><span data-stu-id="27bb2-102">Overload resolution failed because no accessible '\<method>' can be called without a narrowing conversion: \<error></span></span>
+<span data-ttu-id="27bb2-103">È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo che può essere chiamato senza una conversione verso un tipo di dati più piccolo.</span><span class="sxs-lookup"><span data-stu-id="27bb2-103">You have made a call to an overloaded method, but the compiler cannot find a method that can be called without a narrowing conversion.</span></span> <span data-ttu-id="27bb2-104">Una conversione verso un tipo di dati più piccolo imposta un valore su un tipo di dati che potrebbe non contenere esattamente alcuni dei possibili valori.</span><span class="sxs-lookup"><span data-stu-id="27bb2-104">A narrowing conversion changes a value to a data type that might not be able to precisely hold some of the possible values.</span></span>  
   
- <span data-ttu-id="a020b-105">**ID errore:** BC30519</span><span class="sxs-lookup"><span data-stu-id="a020b-105">**Error ID:** BC30519</span></span>  
+ <span data-ttu-id="27bb2-105">**ID errore:** BC30519</span><span class="sxs-lookup"><span data-stu-id="27bb2-105">**Error ID:** BC30519</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a020b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a020b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="27bb2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="27bb2-106">To correct this error</span></span>  
   
-- <span data-ttu-id="a020b-107">Specificare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="a020b-107">Specify `Option Strict Off`.</span></span>  
+- <span data-ttu-id="27bb2-107">Specificare `Option Strict Off`.</span><span class="sxs-lookup"><span data-stu-id="27bb2-107">Specify `Option Strict Off`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a020b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a020b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="27bb2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="27bb2-108">See also</span></span>
 
-- [<span data-ttu-id="a020b-109">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="a020b-109">Overloaded Properties and Methods</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
-- [<span data-ttu-id="a020b-110">Conversioni di ampliamento e restrizione</span><span class="sxs-lookup"><span data-stu-id="a020b-110">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [<span data-ttu-id="a020b-111">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="a020b-111">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="27bb2-109">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="27bb2-109">Overloaded Properties and Methods</span></span>](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [<span data-ttu-id="27bb2-110">Widening and Narrowing Conversions</span><span class="sxs-lookup"><span data-stu-id="27bb2-110">Widening and Narrowing Conversions</span></span>](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [<span data-ttu-id="27bb2-111">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="27bb2-111">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
