--- a/docs/visual-basic/misc/bc30650.md
+++ b/docs/visual-basic/misc/bc30650.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30650
 ms.assetid: 566aa501-d283-4c1f-b494-3bc5fbe80e04
-ms.openlocfilehash: 189f5bf07885b4ff247463468c58d1adcad0cd23
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 87132723c2bad0918fd8c0f13b8431056fe9e1aa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646476"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415050"
 ---
-# <a name="enums-must-be-declared-as-an-integral-type"></a><span data-ttu-id="ca070-102">I valori Enum devono essere dichiarati come tipo integrale</span><span class="sxs-lookup"><span data-stu-id="ca070-102">Enums must be declared as an integral type</span></span>
-<span data-ttu-id="ca070-103">Gli unici tipi validi che è possibile usare nelle enumerazioni sono `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`e `ULong`.</span><span class="sxs-lookup"><span data-stu-id="ca070-103">The only valid types you can use in enumerations are `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, and `ULong`.</span></span> <span data-ttu-id="ca070-104">Non è possibile usare altri tipi di dati.</span><span class="sxs-lookup"><span data-stu-id="ca070-104">No other data types can be used.</span></span>  
+# <a name="enums-must-be-declared-as-an-integral-type"></a><span data-ttu-id="78467-102">I valori Enum devono essere dichiarati come tipo integrale</span><span class="sxs-lookup"><span data-stu-id="78467-102">Enums must be declared as an integral type</span></span>
+<span data-ttu-id="78467-103">Gli unici tipi validi che è possibile usare nelle enumerazioni sono `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`e `ULong`.</span><span class="sxs-lookup"><span data-stu-id="78467-103">The only valid types you can use in enumerations are `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, and `ULong`.</span></span> <span data-ttu-id="78467-104">Non è possibile usare altri tipi di dati.</span><span class="sxs-lookup"><span data-stu-id="78467-104">No other data types can be used.</span></span>  
   
- <span data-ttu-id="ca070-105">**ID errore:** BC30650</span><span class="sxs-lookup"><span data-stu-id="ca070-105">**Error ID:** BC30650</span></span>  
+ <span data-ttu-id="78467-105">**ID errore:** BC30650</span><span class="sxs-lookup"><span data-stu-id="78467-105">**Error ID:** BC30650</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ca070-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ca070-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="78467-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="78467-106">To correct this error</span></span>  
   
-- <span data-ttu-id="ca070-107">Specificare un tipo di dati tra `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`o `ULong`.</span><span class="sxs-lookup"><span data-stu-id="ca070-107">Specify a data type of `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, or `ULong`.</span></span>  
+- <span data-ttu-id="78467-107">Specificare un tipo di dati tra `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`o `ULong`.</span><span class="sxs-lookup"><span data-stu-id="78467-107">Specify a data type of `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`, or `ULong`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ca070-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ca070-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="78467-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="78467-108">See also</span></span>
 
-- [<span data-ttu-id="ca070-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="ca070-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
-- [<span data-ttu-id="ca070-110">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="ca070-110">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+- [<span data-ttu-id="78467-109">Tipi di dati</span><span class="sxs-lookup"><span data-stu-id="78467-109">Data Types</span></span>](../language-reference/data-types/index.md)
+- [<span data-ttu-id="78467-110">Istruzione Enum</span><span class="sxs-lookup"><span data-stu-id="78467-110">Enum Statement</span></span>](../language-reference/statements/enum-statement.md)
