--- a/docs/visual-basic/misc/bc30670.md
+++ b/docs/visual-basic/misc/bc30670.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30670
 ms.assetid: b2c5fea3-e7db-4797-b917-d61a65befbd4
-ms.openlocfilehash: 2d8bd7192f7b2ca273ceb62c50d84c68e9c435e4
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: d3ea0ddf8aa810deea67bae0c015b519385ea70f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352813"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414907"
 ---
-# <a name="redim-statements-require-a-parenthesized-list-of-the-new-bounds-of-each-dimension-of-the-array"></a><span data-ttu-id="3bfbc-102">Le istruzioni 'ReDim' richiedono un elenco tra parentesi dei nuovi limiti di ciascuna dimensione della matrice</span><span class="sxs-lookup"><span data-stu-id="3bfbc-102">'ReDim' statements require a parenthesized list of the new bounds of each dimension of the array</span></span>
-<span data-ttu-id="3bfbc-103">È necessario specificare la nuova dimensione della matrice come parte dell'istruzione `ReDim` .</span><span class="sxs-lookup"><span data-stu-id="3bfbc-103">You must specify the new size of an array as part of a `ReDim` statement.</span></span>  
+# <a name="redim-statements-require-a-parenthesized-list-of-the-new-bounds-of-each-dimension-of-the-array"></a><span data-ttu-id="2fc49-102">Le istruzioni 'ReDim' richiedono un elenco tra parentesi dei nuovi limiti di ciascuna dimensione della matrice</span><span class="sxs-lookup"><span data-stu-id="2fc49-102">'ReDim' statements require a parenthesized list of the new bounds of each dimension of the array</span></span>
+<span data-ttu-id="2fc49-103">È necessario specificare la nuova dimensione della matrice come parte dell'istruzione `ReDim` .</span><span class="sxs-lookup"><span data-stu-id="2fc49-103">You must specify the new size of an array as part of a `ReDim` statement.</span></span>  
   
- <span data-ttu-id="3bfbc-104">**ID errore:** BC30670</span><span class="sxs-lookup"><span data-stu-id="3bfbc-104">**Error ID:** BC30670</span></span>  
+ <span data-ttu-id="2fc49-104">**ID errore:** BC30670</span><span class="sxs-lookup"><span data-stu-id="2fc49-104">**Error ID:** BC30670</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3bfbc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3bfbc-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2fc49-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2fc49-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3bfbc-106">Specificare le dimensioni di ogni serie di matrici, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="3bfbc-106">Supply the size of each rank of the array; for example:</span></span>  
+- <span data-ttu-id="2fc49-106">Specificare le dimensioni di ogni serie di matrici, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="2fc49-106">Supply the size of each rank of the array; for example:</span></span>  
   
     ```vb  
     ReDim arr(5, 6)  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="3bfbc-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3bfbc-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2fc49-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2fc49-107">See also</span></span>
 
-- [<span data-ttu-id="3bfbc-108">Istruzione ReDim</span><span class="sxs-lookup"><span data-stu-id="3bfbc-108">ReDim Statement</span></span>](../../visual-basic/language-reference/statements/redim-statement.md)
+- [<span data-ttu-id="2fc49-108">Istruzione ReDim</span><span class="sxs-lookup"><span data-stu-id="2fc49-108">ReDim Statement</span></span>](../language-reference/statements/redim-statement.md)
