--- a/docs/visual-basic/misc/bc30671.md
+++ b/docs/visual-basic/misc/bc30671.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30671
 ms.assetid: 57bbdd58-b58d-4144-8fa6-366a7167df27
-ms.openlocfilehash: fdd4cf02d043fc13a03f4a441e9f440271b68bb9
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 585c735daccdc3d42fcbe305d4c714abe15b070a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512978"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414894"
 ---
-# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="2421f-102">Inizializzazione esplicita non consentita con più variabili dichiarate con un singolo identificatore di tipo</span><span class="sxs-lookup"><span data-stu-id="2421f-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
+# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="f8094-102">Inizializzazione esplicita non consentita con più variabili dichiarate con un singolo identificatore di tipo</span><span class="sxs-lookup"><span data-stu-id="f8094-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
 
-<span data-ttu-id="2421f-103">L'inizializzazione non è consentita quando vengono dichiarate più variabili nella stessa riga.</span><span class="sxs-lookup"><span data-stu-id="2421f-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>
+<span data-ttu-id="f8094-103">L'inizializzazione non è consentita quando vengono dichiarate più variabili nella stessa riga.</span><span class="sxs-lookup"><span data-stu-id="f8094-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>
 
-<span data-ttu-id="2421f-104">**ID errore:** BC30671</span><span class="sxs-lookup"><span data-stu-id="2421f-104">**Error ID:** BC30671</span></span>
+<span data-ttu-id="f8094-104">**ID errore:** BC30671</span><span class="sxs-lookup"><span data-stu-id="f8094-104">**Error ID:** BC30671</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="2421f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2421f-105">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="f8094-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f8094-105">To correct this error</span></span>
 
-1. <span data-ttu-id="2421f-106">Dichiarare e inizializzare ogni elemento separatamente.</span><span class="sxs-lookup"><span data-stu-id="2421f-106">Declare and initialize each item separately.</span></span>
+1. <span data-ttu-id="f8094-106">Dichiarare e inizializzare ogni elemento separatamente.</span><span class="sxs-lookup"><span data-stu-id="f8094-106">Declare and initialize each item separately.</span></span>
 
-2. <span data-ttu-id="2421f-107">Dichiarare insieme più elementi e quindi inizializzare ogni elemento, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="2421f-107">Declare multiple items together and then initialize each item; for example:</span></span>
+2. <span data-ttu-id="f8094-107">Dichiarare insieme più elementi e quindi inizializzare ogni elemento, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="f8094-107">Declare multiple items together and then initialize each item; for example:</span></span>
 
     ```vb
     Dim x, b, i As Integer
@@ -32,7 +32,7 @@ ms.locfileid: "68512978"
     ' ":" is the same as a new line.
     ```
 
-## <a name="see-also"></a><span data-ttu-id="2421f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2421f-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f8094-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f8094-108">See also</span></span>
 
-- [<span data-ttu-id="2421f-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="2421f-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="2421f-110">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="2421f-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [<span data-ttu-id="f8094-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="f8094-109">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="f8094-110">Dichiarazione di variabile</span><span class="sxs-lookup"><span data-stu-id="f8094-110">Variable Declaration</span></span>](../programming-guide/language-features/variables/variable-declaration.md)
