--- a/docs/visual-basic/misc/bc30688.md
+++ b/docs/visual-basic/misc/bc30688.md
@@ -1,5 +1,5 @@
 ---
-title: Gli eventi nelle interfacce non possono essere dichiarati '<implements>'
+title: Gli eventi nelle interfacce non possono essere dichiarati ' <implements> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30688
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30688
 ms.assetid: 577823c1-815c-4f1c-9177-4bbf73fa92db
-ms.openlocfilehash: 280571377b80847ec985e2d2876c37321de28a48
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 50b3aabd148678ec4aba0479e4f9c00aec5be384
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936565"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412754"
 ---
-# <a name="events-in-interfaces-cannot-be-declared-implements"></a><span data-ttu-id="8748a-102">Gli eventi nelle interfacce non possono essere dichiarati '\<implementa >'</span><span class="sxs-lookup"><span data-stu-id="8748a-102">Events in interfaces cannot be declared '\<implements>'</span></span>
-<span data-ttu-id="8748a-103">Gli eventi dichiarati nelle interfacce non possono implementare gli eventi di altre interfacce.</span><span class="sxs-lookup"><span data-stu-id="8748a-103">Events declared in interfaces cannot implement the events of other interfaces.</span></span>  
+# <a name="events-in-interfaces-cannot-be-declared-implements"></a><span data-ttu-id="d69b0-102">Gli eventi nelle interfacce non possono essere dichiarati ' \<implements> '</span><span class="sxs-lookup"><span data-stu-id="d69b0-102">Events in interfaces cannot be declared '\<implements>'</span></span>
+<span data-ttu-id="d69b0-103">Gli eventi dichiarati nelle interfacce non possono implementare gli eventi di altre interfacce.</span><span class="sxs-lookup"><span data-stu-id="d69b0-103">Events declared in interfaces cannot implement the events of other interfaces.</span></span>  
   
- <span data-ttu-id="8748a-104">**ID errore:** BC30688</span><span class="sxs-lookup"><span data-stu-id="8748a-104">**Error ID:** BC30688</span></span>  
+ <span data-ttu-id="d69b0-104">**ID errore:** BC30688</span><span class="sxs-lookup"><span data-stu-id="d69b0-104">**Error ID:** BC30688</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8748a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8748a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d69b0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d69b0-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="8748a-106">Rimuovere l'istruzione `Implements` .</span><span class="sxs-lookup"><span data-stu-id="8748a-106">Remove the `Implements` statement.</span></span>  
+1. <span data-ttu-id="d69b0-106">Rimuovere l'istruzione `Implements` .</span><span class="sxs-lookup"><span data-stu-id="d69b0-106">Remove the `Implements` statement.</span></span>  
   
-2. <span data-ttu-id="8748a-107">Implementare l'evento all'interno di una classe o di una struttura.</span><span class="sxs-lookup"><span data-stu-id="8748a-107">Implement the event within a class or structure.</span></span>  
+2. <span data-ttu-id="d69b0-107">Implementare l'evento all'interno di una classe o di una struttura.</span><span class="sxs-lookup"><span data-stu-id="d69b0-107">Implement the event within a class or structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8748a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8748a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d69b0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d69b0-108">See also</span></span>
 
-- [<span data-ttu-id="8748a-109">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="8748a-109">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="d69b0-109">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="d69b0-109">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
