--- a/docs/visual-basic/misc/bc30701.md
+++ b/docs/visual-basic/misc/bc30701.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30701
 ms.assetid: 9c9a460b-5b0d-4ca7-ac9a-e224cec2f343
-ms.openlocfilehash: 9bc28f10089f07a937eee90452686521a339785e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4b18aaf5ccdbde44ccdfbe15512af92f3991827a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657302"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412650"
 ---
-# <a name="nothing-cannot-be-evaluated"></a><span data-ttu-id="167af-102">Non è possibile valutare 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="167af-102">'Nothing' cannot be evaluated</span></span>
-<span data-ttu-id="167af-103">La parola chiave `Nothing` è stata usata nella finestra di debug.</span><span class="sxs-lookup"><span data-stu-id="167af-103">The `Nothing` keyword was used in the debug window.</span></span>  
+# <a name="nothing-cannot-be-evaluated"></a><span data-ttu-id="ae894-102">Non è possibile valutare 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="ae894-102">'Nothing' cannot be evaluated</span></span>
+<span data-ttu-id="ae894-103">La parola chiave `Nothing` è stata usata nella finestra di debug.</span><span class="sxs-lookup"><span data-stu-id="ae894-103">The `Nothing` keyword was used in the debug window.</span></span>  
   
- <span data-ttu-id="167af-104">**ID errore:** BC30701</span><span class="sxs-lookup"><span data-stu-id="167af-104">**Error ID:** BC30701</span></span>  
+ <span data-ttu-id="ae894-104">**ID errore:** BC30701</span><span class="sxs-lookup"><span data-stu-id="ae894-104">**Error ID:** BC30701</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="167af-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="167af-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ae894-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ae894-105">To correct this error</span></span>  
   
-- <span data-ttu-id="167af-106">Non usare `Nothing` durante il debug.</span><span class="sxs-lookup"><span data-stu-id="167af-106">Do not use `Nothing` while debugging.</span></span>  
+- <span data-ttu-id="ae894-106">Non usare `Nothing` durante il debug.</span><span class="sxs-lookup"><span data-stu-id="ae894-106">Do not use `Nothing` while debugging.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="167af-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="167af-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ae894-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ae894-107">See also</span></span>
 
-- [<span data-ttu-id="167af-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="167af-108">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="ae894-108">Nothing</span><span class="sxs-lookup"><span data-stu-id="ae894-108">Nothing</span></span>](../language-reference/nothing.md)
