--- a/docs/visual-basic/misc/bc30742.md
+++ b/docs/visual-basic/misc/bc30742.md
@@ -1,5 +1,5 @@
 ---
-title: Valore '<valuename1>'non può essere convertito in'<valuename2>'
+title: <valuename1>Non è possibile convertire il valore '' in ' <valuename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30742
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30742
 ms.assetid: f1a53307-eb64-4582-abcc-9c6bc24bdbf2
-ms.openlocfilehash: c661dfdae9a82a6beb6f79fa27c5a5ee9a193b9e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 362dbcf7bf0e5da86c550c6673396b0539abd80f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646108"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358919"
 ---
-# <a name="value-valuename1-cannot-be-converted-to-valuename2"></a><span data-ttu-id="a18c2-102">Valore '\<valuename1 >' non può essere convertito in '\<valuename2 >'</span><span class="sxs-lookup"><span data-stu-id="a18c2-102">Value '\<valuename1>' cannot be converted to '\<valuename2>'</span></span>
-<span data-ttu-id="a18c2-103">È stata tentata una conversione del tipo tra due tipi incompatibili.</span><span class="sxs-lookup"><span data-stu-id="a18c2-103">A type conversion was attempted between two incompatible types.</span></span>  
+# <a name="value-valuename1-cannot-be-converted-to-valuename2"></a><span data-ttu-id="5eb54-102">\<valuename1>Non è possibile convertire il valore '' in ' \<valuename2> '</span><span class="sxs-lookup"><span data-stu-id="5eb54-102">Value '\<valuename1>' cannot be converted to '\<valuename2>'</span></span>
+<span data-ttu-id="5eb54-103">È stata tentata una conversione del tipo tra due tipi incompatibili.</span><span class="sxs-lookup"><span data-stu-id="5eb54-103">A type conversion was attempted between two incompatible types.</span></span>  
   
- <span data-ttu-id="a18c2-104">**ID errore:** BC30742</span><span class="sxs-lookup"><span data-stu-id="a18c2-104">**Error ID:** BC30742</span></span>  
+ <span data-ttu-id="5eb54-104">**ID errore:** BC30742</span><span class="sxs-lookup"><span data-stu-id="5eb54-104">**Error ID:** BC30742</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a18c2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a18c2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5eb54-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5eb54-105">To correct this error</span></span>  
   
-- <span data-ttu-id="a18c2-106">Verificare l'esecuzione del cast dei tipi.</span><span class="sxs-lookup"><span data-stu-id="a18c2-106">Verify the types that are being cast.</span></span>  
+- <span data-ttu-id="5eb54-106">Verificare l'esecuzione del cast dei tipi.</span><span class="sxs-lookup"><span data-stu-id="5eb54-106">Verify the types that are being cast.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a18c2-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a18c2-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5eb54-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5eb54-107">See also</span></span>
 
-- [<span data-ttu-id="a18c2-108">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="a18c2-108">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="5eb54-108">CType Function</span><span class="sxs-lookup"><span data-stu-id="5eb54-108">CType Function</span></span>](../language-reference/functions/ctype-function.md)
