--- a/docs/visual-basic/misc/bc30939.md
+++ b/docs/visual-basic/misc/bc30939.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione 'AddressOf' non può essere convertito in '<typename>' perché tipo '<typename>' è dichiarato 'come MustInherit' e non può essere creato
+title: Impossibile convertire l'espressione 'AddressOf' in '<typename>' perché il tipo '<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30939
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30939
 ms.assetid: e8edef15-0df5-46d7-aba6-89e26a2aa506
-ms.openlocfilehash: b6a3f6ee5aafb4b00cd70eb16917b8ba2f438333
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4dcb0e5f90115ac3d8d41e4a97da6b975341f7f8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621880"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413986"
 ---
-# <a name="addressof-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a><span data-ttu-id="aa47e-102">Espressione 'AddressOf' non può essere convertito in '\<nomeTipo >' perché tipo '\<nomeTipo >' è dichiarato 'come MustInherit' e non può essere creato</span><span class="sxs-lookup"><span data-stu-id="aa47e-102">'AddressOf' expression cannot be converted to '\<typename>' because type '\<typename>' is declared 'MustInherit' and cannot be created</span></span>
-<span data-ttu-id="aa47e-103">Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che può essere solo una classe base e non può essere usato per creare un'istanza.</span><span class="sxs-lookup"><span data-stu-id="aa47e-103">A statement attempts to convert an `AddressOf` expression to a type that can only be a base class and cannot be used to create an instance.</span></span>  
+# <a name="addressof-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a><span data-ttu-id="dae4e-102">Impossibile convertire l'espressione 'AddressOf' in '\<typename>' perché il tipo '\<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo</span><span class="sxs-lookup"><span data-stu-id="dae4e-102">'AddressOf' expression cannot be converted to '\<typename>' because type '\<typename>' is declared 'MustInherit' and cannot be created</span></span>
+<span data-ttu-id="dae4e-103">Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che può essere solo una classe base e non può essere usato per creare un'istanza.</span><span class="sxs-lookup"><span data-stu-id="dae4e-103">A statement attempts to convert an `AddressOf` expression to a type that can only be a base class and cannot be used to create an instance.</span></span>  
   
- <span data-ttu-id="aa47e-104">L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica.</span><span class="sxs-lookup"><span data-stu-id="aa47e-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span>  
+ <span data-ttu-id="dae4e-104">L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica.</span><span class="sxs-lookup"><span data-stu-id="dae4e-104">The `AddressOf` operator creates a procedure delegate instance that references a specific procedure.</span></span>  
   
- <span data-ttu-id="aa47e-105">**ID errore:** BC30939</span><span class="sxs-lookup"><span data-stu-id="aa47e-105">**Error ID:** BC30939</span></span>  
+ <span data-ttu-id="dae4e-105">**ID errore:** BC30939</span><span class="sxs-lookup"><span data-stu-id="dae4e-105">**Error ID:** BC30939</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aa47e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aa47e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dae4e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dae4e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="aa47e-107">Assegnare l'espressione `AddressOf` a un tipo delegato specifico.</span><span class="sxs-lookup"><span data-stu-id="aa47e-107">Assign the `AddressOf` expression to a specific delegate type.</span></span>  
+- <span data-ttu-id="dae4e-107">Assegnare l'espressione `AddressOf` a un tipo delegato specifico.</span><span class="sxs-lookup"><span data-stu-id="dae4e-107">Assign the `AddressOf` expression to a specific delegate type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aa47e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aa47e-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dae4e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dae4e-108">See also</span></span>
 
-- [<span data-ttu-id="aa47e-109">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="aa47e-109">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [<span data-ttu-id="dae4e-109">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="dae4e-109">AddressOf Operator</span></span>](../language-reference/operators/addressof-operator.md)
 
-- [<span data-ttu-id="aa47e-110">Delegati</span><span class="sxs-lookup"><span data-stu-id="aa47e-110">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)
+- [<span data-ttu-id="dae4e-110">Delegati</span><span class="sxs-lookup"><span data-stu-id="dae4e-110">Delegates</span></span>](../programming-guide/language-features/delegates/index.md)
