--- a/docs/visual-basic/misc/bc30943.md
+++ b/docs/visual-basic/misc/bc30943.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30943
 ms.assetid: 0e3bff62-f187-4864-8520-70f6be22e869
-ms.openlocfilehash: 16e548d1c0794bdb2e201b17a9be2e827c59c1fb
-ms.sourcegitcommit: c7a7e1468bf0fa7f7065de951d60dfc8d5ba89f5
+ms.openlocfilehash: 846f631ef48b5b4148abd7aebb7cdc49eef502a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/14/2019
-ms.locfileid: "65588765"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413973"
 ---
-# <a name="generic-methods-cannot-be-exposed-to-com"></a><span data-ttu-id="b04ce-102">I metodi generici non possono essere esposti a COM</span><span class="sxs-lookup"><span data-stu-id="b04ce-102">Generic methods cannot be exposed to COM</span></span>
-<span data-ttu-id="b04ce-103">Un componente di .NET Framework che contiene uno o più routine generiche viene esportato in un componente COM.</span><span class="sxs-lookup"><span data-stu-id="b04ce-103">A .NET Framework component containing one or more generic procedures is exported to a COM component.</span></span>  
+# <a name="generic-methods-cannot-be-exposed-to-com"></a><span data-ttu-id="1df0f-102">I metodi generici non possono essere esposti a COM</span><span class="sxs-lookup"><span data-stu-id="1df0f-102">Generic methods cannot be exposed to COM</span></span>
+<span data-ttu-id="1df0f-103">Un componente .NET Framework contenente una o più routine generiche viene esportato in un componente COM.</span><span class="sxs-lookup"><span data-stu-id="1df0f-103">A .NET Framework component containing one or more generic procedures is exported to a COM component.</span></span>  
   
- <span data-ttu-id="b04ce-104">Il modello COM (Component Object Model) non supporta tipi generici e non può interagire con essi.</span><span class="sxs-lookup"><span data-stu-id="b04ce-104">The Component Object Model (COM) does not support generic types, and it cannot interoperate with them.</span></span>  
+ <span data-ttu-id="1df0f-104">Il modello COM (Component Object Model) non supporta tipi generici e non può interagire con essi.</span><span class="sxs-lookup"><span data-stu-id="1df0f-104">The Component Object Model (COM) does not support generic types, and it cannot interoperate with them.</span></span>  
   
- <span data-ttu-id="b04ce-105">**ID errore:** BC30943</span><span class="sxs-lookup"><span data-stu-id="b04ce-105">**Error ID:** BC30943</span></span>  
+ <span data-ttu-id="1df0f-105">**ID errore:** BC30943</span><span class="sxs-lookup"><span data-stu-id="1df0f-105">**Error ID:** BC30943</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b04ce-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b04ce-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1df0f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1df0f-106">To correct this error</span></span>  
   
-- <span data-ttu-id="b04ce-107">Rimuovere il file o le routine generiche dal componente di .NET Framework oppure non usarlo per l'interoperabilità COM.</span><span class="sxs-lookup"><span data-stu-id="b04ce-107">Remove the generic procedure or procedures from the .NET Framework component, or do not use it for COM interop.</span></span>  
+- <span data-ttu-id="1df0f-107">Rimuovere la routine o le routine generiche dal componente .NET Framework oppure non usarle per l'interoperabilità COM.</span><span class="sxs-lookup"><span data-stu-id="1df0f-107">Remove the generic procedure or procedures from the .NET Framework component, or do not use it for COM interop.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b04ce-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b04ce-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1df0f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1df0f-108">See also</span></span>
 
-- [<span data-ttu-id="b04ce-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b04ce-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="b04ce-110">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="b04ce-110">COM Interop</span></span>](../../visual-basic/programming-guide/com-interop/index.md)
+- [<span data-ttu-id="1df0f-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1df0f-109">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="1df0f-110">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="1df0f-110">COM Interop</span></span>](../programming-guide/com-interop/index.md)
