--- a/docs/visual-basic/misc/bc31130.md
+++ b/docs/visual-basic/misc/bc31130.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'AddHandler' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' AddHandler ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31130
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31130
 ms.assetid: cf6c7fd6-ce2e-4916-b427-2a4a63e7279d
-ms.openlocfilehash: e71e6fe99ac0d438f72d76f135c655297209459f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 88d4cb16a2159af688cc59188bc8813609abf198
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61595465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414751"
 ---
-# <a name="addhandler-definition-missing-for-event-eventname"></a><span data-ttu-id="d8ea2-102">Definizione di 'AddHandler' mancante per l'evento '\<NomeEvento >'</span><span class="sxs-lookup"><span data-stu-id="d8ea2-102">'AddHandler' definition missing for event '\<eventname>'</span></span>
-<span data-ttu-id="d8ea2-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per l'aggiunta di un gestore eventi.</span><span class="sxs-lookup"><span data-stu-id="d8ea2-103">If an event is declared as `Custom`, it must supply a procedure for adding an event handler.</span></span>  
+# <a name="addhandler-definition-missing-for-event-eventname"></a><span data-ttu-id="3b8cc-102">Manca la definizione di ' AddHandler ' per l'evento ' \<eventname> '</span><span class="sxs-lookup"><span data-stu-id="3b8cc-102">'AddHandler' definition missing for event '\<eventname>'</span></span>
+<span data-ttu-id="3b8cc-103">Se un evento viene dichiarato come `Custom`, deve fornire una routine per l'aggiunta di un gestore eventi.</span><span class="sxs-lookup"><span data-stu-id="3b8cc-103">If an event is declared as `Custom`, it must supply a procedure for adding an event handler.</span></span>  
   
- <span data-ttu-id="d8ea2-104">**ID errore:** BC31130</span><span class="sxs-lookup"><span data-stu-id="d8ea2-104">**Error ID:** BC31130</span></span>  
+ <span data-ttu-id="3b8cc-104">**ID errore:** BC31130</span><span class="sxs-lookup"><span data-stu-id="3b8cc-104">**Error ID:** BC31130</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d8ea2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d8ea2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3b8cc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3b8cc-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="d8ea2-106">Includere una dichiarazione `AddHandler` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="d8ea2-106">Include an `AddHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
+1. <span data-ttu-id="3b8cc-106">Includere una dichiarazione `AddHandler` tra l'istruzione `Custom Event` e l'istruzione `End Event` .</span><span class="sxs-lookup"><span data-stu-id="3b8cc-106">Include an `AddHandler` declaration between the `Custom Event` statement and the `End Event` statement.</span></span>  
   
-2. <span data-ttu-id="d8ea2-107">Verificare che le altre routine all'interno della dichiarazione di evento terminino correttamente.</span><span class="sxs-lookup"><span data-stu-id="d8ea2-107">Verify that other procedures within the event declaration end correctly.</span></span>  
+2. <span data-ttu-id="3b8cc-107">Verificare che le altre routine all'interno della dichiarazione di evento terminino correttamente.</span><span class="sxs-lookup"><span data-stu-id="3b8cc-107">Verify that other procedures within the event declaration end correctly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d8ea2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d8ea2-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3b8cc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3b8cc-108">See also</span></span>
 
-- [<span data-ttu-id="d8ea2-109">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="d8ea2-109">AddHandler Statement</span></span>](../../visual-basic/language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="d8ea2-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="d8ea2-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="3b8cc-109">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="3b8cc-109">AddHandler Statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="3b8cc-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="3b8cc-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
