--- a/docs/visual-basic/misc/bc31134.md
+++ b/docs/visual-basic/misc/bc31134.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC31134
 ms.assetid: 942f0b91-e71a-499a-ad10-a5dfcb4e72b1
-ms.openlocfilehash: 7747bd64ff8642fab36887b276b93e7cc455dd88
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5a90a9fff3cd5ba3f2800b8c2c33759a862ac33d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664565"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414725"
 ---
-# <a name="addhandler-and-removehandler-method-parameters-cannot-be-declared-byref"></a><span data-ttu-id="967b3-102">I parametri dei metodi 'AddHandler' e 'RemoveHandler' non possono essere dichiarati come 'ByRef'</span><span class="sxs-lookup"><span data-stu-id="967b3-102">'AddHandler' and 'RemoveHandler' method parameters cannot be declared 'ByRef'</span></span>
-<span data-ttu-id="967b3-103">I parametri dei metodi `AddHandler` e `RemoveHandler` non possono essere dichiarati con il modificatore `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="967b3-103">The parameters of the `AddHandler` and `RemoveHandler` methods cannot be declared with the `ByRef` modifier.</span></span>  
+# <a name="addhandler-and-removehandler-method-parameters-cannot-be-declared-byref"></a><span data-ttu-id="a0b53-102">I parametri dei metodi 'AddHandler' e 'RemoveHandler' non possono essere dichiarati come 'ByRef'</span><span class="sxs-lookup"><span data-stu-id="a0b53-102">'AddHandler' and 'RemoveHandler' method parameters cannot be declared 'ByRef'</span></span>
+<span data-ttu-id="a0b53-103">I parametri dei metodi `AddHandler` e `RemoveHandler` non possono essere dichiarati con il modificatore `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="a0b53-103">The parameters of the `AddHandler` and `RemoveHandler` methods cannot be declared with the `ByRef` modifier.</span></span>  
   
- <span data-ttu-id="967b3-104">**ID errore:** BC31134</span><span class="sxs-lookup"><span data-stu-id="967b3-104">**Error ID:** BC31134</span></span>  
+ <span data-ttu-id="a0b53-104">**ID errore:** BC31134</span><span class="sxs-lookup"><span data-stu-id="a0b53-104">**Error ID:** BC31134</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="967b3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="967b3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a0b53-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a0b53-105">To correct this error</span></span>  
   
-- <span data-ttu-id="967b3-106">Rimuovere la parola chiave `ByRef` dal parametro.</span><span class="sxs-lookup"><span data-stu-id="967b3-106">Remove the `ByRef` keyword from the parameter.</span></span>  
+- <span data-ttu-id="a0b53-106">Rimuovere la parola chiave `ByRef` dal parametro.</span><span class="sxs-lookup"><span data-stu-id="a0b53-106">Remove the `ByRef` keyword from the parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="967b3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="967b3-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a0b53-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a0b53-107">See also</span></span>
 
-- [<span data-ttu-id="967b3-108">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="967b3-108">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="967b3-109">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="967b3-109">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="967b3-110">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="967b3-110">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="967b3-111">ByRef</span><span class="sxs-lookup"><span data-stu-id="967b3-111">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
-- [<span data-ttu-id="967b3-112">Eventi</span><span class="sxs-lookup"><span data-stu-id="967b3-112">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="a0b53-108">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="a0b53-108">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="a0b53-109">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="a0b53-109">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="a0b53-110">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="a0b53-110">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="a0b53-111">ByRef</span><span class="sxs-lookup"><span data-stu-id="a0b53-111">ByRef</span></span>](../language-reference/modifiers/byref.md)
+- [<span data-ttu-id="a0b53-112">Events</span><span class="sxs-lookup"><span data-stu-id="a0b53-112">Events</span></span>](../programming-guide/language-features/events/index.md)
