--- a/docs/visual-basic/misc/bc32013.md
+++ b/docs/visual-basic/misc/bc32013.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non ammette operandi di tipo Object per l'operatore '<operatorname>'
+title: Option Strict On non consente operandi di tipo Object per l'operatore ' <operatorname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32013
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC32013
 ms.assetid: cd197da8-2676-453b-884b-3231fb6f909d
-ms.openlocfilehash: 7a6a6964aed878e0264f47a513106f237c660683
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 20a9de39eabf81547ac3b31f9d81cc7a25e01425
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833417"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413934"
 ---
-# <a name="option-strict-on-disallows-operands-of-type-object-for-operator-operatorname"></a><span data-ttu-id="16156-102">Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'</span><span class="sxs-lookup"><span data-stu-id="16156-102">Option Strict On disallows operands of type Object for operator '\<operatorname>'</span></span>
-<span data-ttu-id="16156-103">Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'.</span><span class="sxs-lookup"><span data-stu-id="16156-103">Option Strict On disallows operands of type Object for operator '\<operatorname>'.</span></span> <span data-ttu-id="16156-104">Usare l'operatore Is per verificare l'identità dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="16156-104">Use the Is operator to test for object identity.</span></span>  
+# <a name="option-strict-on-disallows-operands-of-type-object-for-operator-operatorname"></a><span data-ttu-id="6d5d0-102">Option Strict On non consente operandi di tipo Object per l'operatore ' \<operatorname> '</span><span class="sxs-lookup"><span data-stu-id="6d5d0-102">Option Strict On disallows operands of type Object for operator '\<operatorname>'</span></span>
+<span data-ttu-id="6d5d0-103">Option Strict On non consente operandi di tipo Object per l'operatore ' \<operatorname> '.</span><span class="sxs-lookup"><span data-stu-id="6d5d0-103">Option Strict On disallows operands of type Object for operator '\<operatorname>'.</span></span> <span data-ttu-id="6d5d0-104">Usare l'operatore Is per verificare l'identità dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="6d5d0-104">Use the Is operator to test for object identity.</span></span>  
   
- <span data-ttu-id="16156-105">Un operatore di confronto aritmetico, ad esempio `=` , viene usato con una o più variabili oggetto quando `Option Strict` è `On`.</span><span class="sxs-lookup"><span data-stu-id="16156-105">An arithmetic comparison operator such as `=` is used with one or more object variables when `Option Strict` is `On`.</span></span>  
+ <span data-ttu-id="6d5d0-105">Un operatore di confronto aritmetico, ad esempio `=` , viene usato con una o più variabili oggetto quando `Option Strict` è `On`.</span><span class="sxs-lookup"><span data-stu-id="6d5d0-105">An arithmetic comparison operator such as `=` is used with one or more object variables when `Option Strict` is `On`.</span></span>  
   
- <span data-ttu-id="16156-106">**ID errore:** BC32013</span><span class="sxs-lookup"><span data-stu-id="16156-106">**Error ID:** BC32013</span></span>  
+ <span data-ttu-id="6d5d0-106">**ID errore:** BC32013</span><span class="sxs-lookup"><span data-stu-id="6d5d0-106">**Error ID:** BC32013</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="16156-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="16156-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6d5d0-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6d5d0-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="16156-108">Attivare `Option Strict Off` se le variabili oggetto contengono valori numerici e si intende usare un confronto aritmetico.</span><span class="sxs-lookup"><span data-stu-id="16156-108">Turn `Option Strict Off` if the object variables contain numeric values and you intend an arithmetic comparison.</span></span>  
+1. <span data-ttu-id="6d5d0-108">Attivare `Option Strict Off` se le variabili oggetto contengono valori numerici e si intende usare un confronto aritmetico.</span><span class="sxs-lookup"><span data-stu-id="6d5d0-108">Turn `Option Strict Off` if the object variables contain numeric values and you intend an arithmetic comparison.</span></span>  
   
-2. <span data-ttu-id="16156-109">Usare l'operatore `Is` per verificare l'identità dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="16156-109">Use the `Is` operator to compare for object identity.</span></span>  
+2. <span data-ttu-id="6d5d0-109">Usare l'operatore `Is` per verificare l'identità dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="6d5d0-109">Use the `Is` operator to compare for object identity.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="16156-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="16156-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6d5d0-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6d5d0-110">See also</span></span>
 
-- [<span data-ttu-id="16156-111">Operatori di confronto</span><span class="sxs-lookup"><span data-stu-id="16156-111">Comparison Operators</span></span>](../../visual-basic/language-reference/operators/comparison-operators.md)
-- [<span data-ttu-id="16156-112">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="16156-112">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)
-- [<span data-ttu-id="16156-113">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="16156-113">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="6d5d0-111">Operatori di confronto</span><span class="sxs-lookup"><span data-stu-id="6d5d0-111">Comparison Operators</span></span>](../language-reference/operators/comparison-operators.md)
+- [<span data-ttu-id="6d5d0-112">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="6d5d0-112">Is Operator</span></span>](../language-reference/operators/is-operator.md)
+- [<span data-ttu-id="6d5d0-113">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="6d5d0-113">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
