--- a/docs/visual-basic/misc/bc32070.md
+++ b/docs/visual-basic/misc/bc32070.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername>'definisce in modo implicito un membro'<implicitmembername>' che ha lo stesso nome di un parametro di tipo
+title: Un membro '<membername>' definisce in modo implicito un membro '<implicitmembername>' che ha lo stesso nome di un parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32070
@@ -7,38 +7,38 @@ f1_keywords:
 helpviewer_keywords:
 - BC32070
 ms.assetid: cc0b3fcf-c141-47e2-9b33-d2b91c8bf2d6
-ms.openlocfilehash: 794e1356d1c78956ef0e298df15143a63c590267
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea25bdc22f64293f64753a5cd1324514b813eb04
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619063"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413817"
 ---
-# <a name="member-membername-implicitly-defines-a-member-implicitmembername-which-has-the-same-name-as-a-type-parameter"></a><span data-ttu-id="85386-102">Membro '\<nomeMembro >' definisce in modo implicito un membro '\<nomemembroimplicito >' che ha lo stesso nome di un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="85386-102">Member '\<membername>' implicitly defines a member '\<implicitmembername>' which has the same name as a type parameter</span></span>
-<span data-ttu-id="85386-103">Un membro di una classe generica genera un membro implicito con lo stesso nome di un parametro di tipo della classe.</span><span class="sxs-lookup"><span data-stu-id="85386-103">A member of a generic class generates an implicit member with the same name as a type parameter for the class.</span></span>  
+# <a name="member-membername-implicitly-defines-a-member-implicitmembername-which-has-the-same-name-as-a-type-parameter"></a><span data-ttu-id="85da3-102">Un membro '\<membername>' definisce in modo implicito un membro '\<implicitmembername>' che ha lo stesso nome di un parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="85da3-102">Member '\<membername>' implicitly defines a member '\<implicitmembername>' which has the same name as a type parameter</span></span>
+<span data-ttu-id="85da3-103">Un membro di una classe generica genera un membro implicito con lo stesso nome di un parametro di tipo della classe.</span><span class="sxs-lookup"><span data-stu-id="85da3-103">A member of a generic class generates an implicit member with the same name as a type parameter for the class.</span></span>  
   
- <span data-ttu-id="85386-104">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="85386-104">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="85386-105">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="85386-105">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
+ <span data-ttu-id="85da3-104">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="85da3-104">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="85da3-105">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="85da3-105">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
   
-|<span data-ttu-id="85386-106">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="85386-106">Declared element</span></span>|<span data-ttu-id="85386-107">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="85386-107">Implicitly created members</span></span>|  
+|<span data-ttu-id="85da3-106">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="85da3-106">Declared element</span></span>|<span data-ttu-id="85da3-107">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="85da3-107">Implicitly created members</span></span>|  
 |----------------------|--------------------------------|  
-|<span data-ttu-id="85386-108">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="85386-108">Enumeration</span></span>|<span data-ttu-id="85386-109">Membro`value__` </span><span class="sxs-lookup"><span data-stu-id="85386-109">`value__` member</span></span>|  
-|<span data-ttu-id="85386-110">event</span><span class="sxs-lookup"><span data-stu-id="85386-110">Event</span></span>|<span data-ttu-id="85386-111">Routine`add_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="85386-111">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="85386-112">Routine`remove_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="85386-112">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="85386-113">Campo di`<eventname>Event` </span><span class="sxs-lookup"><span data-stu-id="85386-113">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="85386-114">Delegato`<eventname>EventHandler` </span><span class="sxs-lookup"><span data-stu-id="85386-114">`<eventname>EventHandler` delegate</span></span>|  
-|<span data-ttu-id="85386-115">Proprietà</span><span class="sxs-lookup"><span data-stu-id="85386-115">Property</span></span>|<span data-ttu-id="85386-116">Routine`get_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="85386-116">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="85386-117">Routine`set_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="85386-117">`set_<propertyname>` procedure</span></span>|  
-|<span data-ttu-id="85386-118">Variabile di una raccolta`My.` </span><span class="sxs-lookup"><span data-stu-id="85386-118">`My.` collection variable</span></span>|<span data-ttu-id="85386-119">Variabile`m_<variablename>` `Static` </span><span class="sxs-lookup"><span data-stu-id="85386-119">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="85386-120">Proprietà`<variablename>` </span><span class="sxs-lookup"><span data-stu-id="85386-120">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="85386-121">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="85386-121">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="85386-122">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="85386-122">`set_<variablename>` procedure</span></span>|  
-|<span data-ttu-id="85386-123">Variabile`WithEvents` </span><span class="sxs-lookup"><span data-stu-id="85386-123">`WithEvents` variable</span></span>|<span data-ttu-id="85386-124">Variabile `_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85386-124">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="85386-125">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85386-125">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="85386-126">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="85386-126">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="85386-127">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="85386-127">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="85da3-108">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="85da3-108">Enumeration</span></span>|<span data-ttu-id="85da3-109">Membro`value__`</span><span class="sxs-lookup"><span data-stu-id="85da3-109">`value__` member</span></span>|  
+|<span data-ttu-id="85da3-110">Event</span><span class="sxs-lookup"><span data-stu-id="85da3-110">Event</span></span>|<span data-ttu-id="85da3-111">Routine`add_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="85da3-111">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="85da3-112">Routine`remove_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="85da3-112">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="85da3-113">Campo di`<eventname>Event`</span><span class="sxs-lookup"><span data-stu-id="85da3-113">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="85da3-114">Delegato`<eventname>EventHandler`</span><span class="sxs-lookup"><span data-stu-id="85da3-114">`<eventname>EventHandler` delegate</span></span>|  
+|<span data-ttu-id="85da3-115">Proprietà</span><span class="sxs-lookup"><span data-stu-id="85da3-115">Property</span></span>|<span data-ttu-id="85da3-116">Routine`get_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="85da3-116">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="85da3-117">Routine`set_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="85da3-117">`set_<propertyname>` procedure</span></span>|  
+|<span data-ttu-id="85da3-118">Variabile di una raccolta`My.`</span><span class="sxs-lookup"><span data-stu-id="85da3-118">`My.` collection variable</span></span>|<span data-ttu-id="85da3-119">`m_<variablename>``Static`variabile</span><span class="sxs-lookup"><span data-stu-id="85da3-119">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="85da3-120">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-120">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="85da3-121">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-121">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="85da3-122">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-122">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="85da3-123">Variabile</span><span class="sxs-lookup"><span data-stu-id="85da3-123">`WithEvents` variable</span></span>|<span data-ttu-id="85da3-124">Variabile</span><span class="sxs-lookup"><span data-stu-id="85da3-124">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="85da3-125">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-125">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="85da3-126">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-126">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="85da3-127">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="85da3-127">`set_<variablename>` procedure</span></span>|  
   
- <span data-ttu-id="85386-128">A causa della possibilità di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="85386-128">Because of the possibility of name conflicts, you should avoid naming any declared programming element using the same form as any of these implicit members.</span></span> <span data-ttu-id="85386-129">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="85386-129">For example, you should avoid any element name that begins with `get_` or `set_`.</span></span>  
+ <span data-ttu-id="85da3-128">A causa della possibilità di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="85da3-128">Because of the possibility of name conflicts, you should avoid naming any declared programming element using the same form as any of these implicit members.</span></span> <span data-ttu-id="85da3-129">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="85da3-129">For example, you should avoid any element name that begins with `get_` or `set_`.</span></span>  
   
- <span data-ttu-id="85386-130">**ID errore:** BC32070</span><span class="sxs-lookup"><span data-stu-id="85386-130">**Error ID:** BC32070</span></span>  
+ <span data-ttu-id="85da3-130">**ID errore:** BC32070</span><span class="sxs-lookup"><span data-stu-id="85da3-130">**Error ID:** BC32070</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="85386-131">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="85386-131">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="85da3-131">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="85da3-131">To correct this error</span></span>  
   
-- <span data-ttu-id="85386-132">Se il nome del parametro di tipo è flessibile, modificarlo per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="85386-132">If the name of the type parameter is flexible, change it to avoid conflicts with the names listed in the preceding table.</span></span>  
+- <span data-ttu-id="85da3-132">Se il nome del parametro di tipo è flessibile, modificarlo per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="85da3-132">If the name of the type parameter is flexible, change it to avoid conflicts with the names listed in the preceding table.</span></span>  
   
-- <span data-ttu-id="85386-133">Se il parametro di tipo deve confermare il suo nome, modificare il nome del membro di classe per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="85386-133">If the type parameter must retain its name, change the name of the class member to avoid conflicts with the names listed in the preceding table.</span></span>  
+- <span data-ttu-id="85da3-133">Se il parametro di tipo deve confermare il suo nome, modificare il nome del membro di classe per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="85da3-133">If the type parameter must retain its name, change the name of the class member to avoid conflicts with the names listed in the preceding table.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="85386-134">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="85386-134">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="85da3-134">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="85da3-134">See also</span></span>
 
-- [<span data-ttu-id="85386-135">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="85386-135">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [<span data-ttu-id="85386-136">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="85386-136">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="85386-137">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="85386-137">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="85da3-135">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="85da3-135">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="85da3-136">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="85da3-136">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="85da3-137">Type List</span><span class="sxs-lookup"><span data-stu-id="85da3-137">Type List</span></span>](../language-reference/statements/type-list.md)
