--- a/docs/visual-basic/misc/bc32071.md
+++ b/docs/visual-basic/misc/bc32071.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo di vincolo '<typename>' già specificato per questo parametro di tipo
+title: Tipo di vincolo '<typename>' già specificato per questo parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32071
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC32071
 ms.assetid: 6b0e85e9-3ac8-4181-97de-ca690b95a63c
-ms.openlocfilehash: 058fb541ddb1c8157b0eeb3f08f676116c5eaa95
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: f0747575f911475e14b72b8bfc116668dbb198ef
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913316"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413804"
 ---
-# <a name="constraint-type-typename-already-specified-for-this-type-parameter"></a><span data-ttu-id="1b37a-102">Il tipo di vincolo '\<nomeTipo >' già specificato per questo parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="1b37a-102">Constraint type '\<typename>' already specified for this type parameter</span></span>
-<span data-ttu-id="1b37a-103">Un elenco di vincoli include più volte un vincolo di classe o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="1b37a-103">A constraint list includes a class or interface constraint more than once.</span></span>  
+# <a name="constraint-type-typename-already-specified-for-this-type-parameter"></a><span data-ttu-id="89eae-102">Tipo di vincolo '\<typename>' già specificato per questo parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="89eae-102">Constraint type '\<typename>' already specified for this type parameter</span></span>
+<span data-ttu-id="89eae-103">Un elenco di vincoli include più volte un vincolo di classe o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="89eae-103">A constraint list includes a class or interface constraint more than once.</span></span>  
   
- <span data-ttu-id="1b37a-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="1b37a-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="1b37a-105">Si possono specificare i requisiti seguenti in qualsiasi combinazione:</span><span class="sxs-lookup"><span data-stu-id="1b37a-105">You can specify the following requirements in any combination:</span></span>  
+ <span data-ttu-id="89eae-104">Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="89eae-104">A constraint list imposes requirements on the type argument passed to the type parameter.</span></span> <span data-ttu-id="89eae-105">Si possono specificare i requisiti seguenti in qualsiasi combinazione:</span><span class="sxs-lookup"><span data-stu-id="89eae-105">You can specify the following requirements in any combination:</span></span>  
   
-- <span data-ttu-id="1b37a-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="1b37a-106">The type argument must implement one or more interfaces</span></span>  
+- <span data-ttu-id="89eae-106">L'argomento di tipo deve implementare una o più interfacce</span><span class="sxs-lookup"><span data-stu-id="89eae-106">The type argument must implement one or more interfaces</span></span>  
   
-- <span data-ttu-id="1b37a-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="1b37a-107">The type argument must inherit from at most one class</span></span>  
+- <span data-ttu-id="89eae-107">L'argomento di tipo deve ereditare al massimo da una classe</span><span class="sxs-lookup"><span data-stu-id="89eae-107">The type argument must inherit from at most one class</span></span>  
   
- <span data-ttu-id="1b37a-108">Un tipo non può implementare o ereditare più volte lo stesso tipo e non è possibile specificare un tipo più volte nello stesso elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="1b37a-108">A type cannot implement or inherit from the same type more than once, and you cannot specify a type more than once in the same constraint list.</span></span>  
+ <span data-ttu-id="89eae-108">Un tipo non può implementare o ereditare più volte lo stesso tipo e non è possibile specificare un tipo più volte nello stesso elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="89eae-108">A type cannot implement or inherit from the same type more than once, and you cannot specify a type more than once in the same constraint list.</span></span>  
   
- <span data-ttu-id="1b37a-109">**ID errore:** BC32071</span><span class="sxs-lookup"><span data-stu-id="1b37a-109">**Error ID:** BC32071</span></span>  
+ <span data-ttu-id="89eae-109">**ID errore:** BC32071</span><span class="sxs-lookup"><span data-stu-id="89eae-109">**Error ID:** BC32071</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1b37a-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1b37a-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="89eae-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="89eae-110">To correct this error</span></span>  
   
-- <span data-ttu-id="1b37a-111">Rimuovere qualsiasi specifica ridondante della stessa classe o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="1b37a-111">Remove any redundant specifications of the same class or interface.</span></span> <span data-ttu-id="1b37a-112">Dovrebbe essere presente una sola volta nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="1b37a-112">It should appear only once in the constraint list.</span></span>  
+- <span data-ttu-id="89eae-111">Rimuovere qualsiasi specifica ridondante della stessa classe o interfaccia.</span><span class="sxs-lookup"><span data-stu-id="89eae-111">Remove any redundant specifications of the same class or interface.</span></span> <span data-ttu-id="89eae-112">Dovrebbe essere presente una sola volta nell'elenco di vincoli.</span><span class="sxs-lookup"><span data-stu-id="89eae-112">It should appear only once in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1b37a-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1b37a-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="89eae-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="89eae-113">See also</span></span>
 
-- [<span data-ttu-id="1b37a-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1b37a-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="1b37a-115">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="1b37a-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="89eae-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="89eae-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="89eae-115">Type List</span><span class="sxs-lookup"><span data-stu-id="89eae-115">Type List</span></span>](../language-reference/statements/type-list.md)
