--- a/docs/visual-basic/misc/bc32075.md
+++ b/docs/visual-basic/misc/bc32075.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32075
 ms.assetid: c620b67e-70f8-42ac-8292-e9ea484904c3
-ms.openlocfilehash: 7b2f2661ee2e34b567fc16ac1bad4528e3523f59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a9bab4314088d560653439d9b606dfb152c8d05b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618722"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413765"
 ---
-# <a name="declare-statements-are-not-allowed-in-generic-types-or-types-contained-in-generic-types"></a><span data-ttu-id="71fd5-102">Le istruzioni 'Declare' non sono consentite in tipi generici o in tipi contenuti in tipi generici</span><span class="sxs-lookup"><span data-stu-id="71fd5-102">'Declare' statements are not allowed in generic types or types contained in generic types</span></span>
-<span data-ttu-id="71fd5-103">Un'istruzione `Declare` è inclusa nell'ambito di una classe o struttura generica oppure di una classe o struttura dichiarata all'interno di una classe o struttura generica.</span><span class="sxs-lookup"><span data-stu-id="71fd5-103">A `Declare` statement appears as part of a generic class or structure, or a class or structure declared within a generic class or structure.</span></span>  
+# <a name="declare-statements-are-not-allowed-in-generic-types-or-types-contained-in-generic-types"></a><span data-ttu-id="dcc4c-102">Le istruzioni 'Declare' non sono consentite in tipi generici o in tipi contenuti in tipi generici</span><span class="sxs-lookup"><span data-stu-id="dcc4c-102">'Declare' statements are not allowed in generic types or types contained in generic types</span></span>
+<span data-ttu-id="dcc4c-103">Un'istruzione `Declare` è inclusa nell'ambito di una classe o struttura generica oppure di una classe o struttura dichiarata all'interno di una classe o struttura generica.</span><span class="sxs-lookup"><span data-stu-id="dcc4c-103">A `Declare` statement appears as part of a generic class or structure, or a class or structure declared within a generic class or structure.</span></span>  
   
- <span data-ttu-id="71fd5-104">Visual Basic e .NET Framework attualmente non supportano le combinazioni di riferimenti esterni e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="71fd5-104">Visual Basic and the .NET Framework do not currently support any combination of external references and generic types.</span></span> <span data-ttu-id="71fd5-105">Il compilatore necessita di tutti i parametri e del tipo restituito di una routine esterna per chiamarla in modo corretto.</span><span class="sxs-lookup"><span data-stu-id="71fd5-105">The compiler needs all the parameters and the return type of an external procedure to call it correctly.</span></span>  
+ <span data-ttu-id="dcc4c-104">Visual Basic e .NET Framework attualmente non supportano le combinazioni di riferimenti esterni e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="dcc4c-104">Visual Basic and the .NET Framework do not currently support any combination of external references and generic types.</span></span> <span data-ttu-id="dcc4c-105">Il compilatore necessita di tutti i parametri e del tipo restituito di una routine esterna per chiamarla in modo corretto.</span><span class="sxs-lookup"><span data-stu-id="dcc4c-105">The compiler needs all the parameters and the return type of an external procedure to call it correctly.</span></span>  
   
- <span data-ttu-id="71fd5-106">**ID errore:** BC32075</span><span class="sxs-lookup"><span data-stu-id="71fd5-106">**Error ID:** BC32075</span></span>  
+ <span data-ttu-id="dcc4c-106">**ID errore:** BC32075</span><span class="sxs-lookup"><span data-stu-id="dcc4c-106">**Error ID:** BC32075</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="71fd5-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="71fd5-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dcc4c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dcc4c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="71fd5-108">Spostare l'istruzione `Declare` all'esterno dell'ambito di un tipo generico oppure rimuoverla del tutto.</span><span class="sxs-lookup"><span data-stu-id="71fd5-108">Move the `Declare` statement outside the scope of any generic type, or remove it altogether.</span></span>  
+- <span data-ttu-id="dcc4c-108">Spostare l'istruzione `Declare` all'esterno dell'ambito di un tipo generico oppure rimuoverla del tutto.</span><span class="sxs-lookup"><span data-stu-id="dcc4c-108">Move the `Declare` statement outside the scope of any generic type, or remove it altogether.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="71fd5-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="71fd5-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dcc4c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dcc4c-109">See also</span></span>
 
-- [<span data-ttu-id="71fd5-110">Istruzione Declare</span><span class="sxs-lookup"><span data-stu-id="71fd5-110">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
-- [<span data-ttu-id="71fd5-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="71fd5-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="dcc4c-110">Declare Statement</span><span class="sxs-lookup"><span data-stu-id="dcc4c-110">Declare Statement</span></span>](../language-reference/statements/declare-statement.md)
+- [<span data-ttu-id="dcc4c-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dcc4c-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
