--- a/docs/visual-basic/misc/bc32077.md
+++ b/docs/visual-basic/misc/bc32077.md
@@ -1,5 +1,5 @@
 ---
-title: «<procedurename>'non è possibile eseguire l'override'<baseprocedurename>' perché si differenziano per i vincoli del parametro
+title: "' <procedurename> ' non può eseguire l'override <baseprocedurename> di '' perché si differenziano per vincoli di parametro di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - BC32077
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC32077
 ms.assetid: 9be1a88d-c1a4-4f12-8e72-74abb2be565d
-ms.openlocfilehash: 44a85cdcd1a495b2fd6d233bc542723bcf1c6b1e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0515d0a768f3e538f681f1c3dacb0dfca2013d09
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618694"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413758"
 ---
-# <a name="procedurename-cannot-override-baseprocedurename-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="def58-102">«\<nomeroutine >' non è possibile eseguire l'override '\<nomeroutinebase >' perché si differenziano per i vincoli del parametro</span><span class="sxs-lookup"><span data-stu-id="def58-102">'\<procedurename>' cannot override '\<baseprocedurename>' because they differ by type parameter constraints</span></span>
-<span data-ttu-id="def58-103">Una routine generica prova a eseguire l'override di una routine della classe base generica, ma contiene elenchi di vincoli diversi nei parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="def58-103">A generic procedure attempts to override a generic base class procedure, but they have different constraint lists on their type parameters.</span></span>  
+# <a name="procedurename-cannot-override-baseprocedurename-because-they-differ-by-type-parameter-constraints"></a><span data-ttu-id="6eb81-102">' \<procedurename> ' non può eseguire l'override \<baseprocedurename> di '' perché si differenziano per vincoli di parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="6eb81-102">'\<procedurename>' cannot override '\<baseprocedurename>' because they differ by type parameter constraints</span></span>
+<span data-ttu-id="6eb81-103">Una routine generica prova a eseguire l'override di una routine della classe base generica, ma contiene elenchi di vincoli diversi nei parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="6eb81-103">A generic procedure attempts to override a generic base class procedure, but they have different constraint lists on their type parameters.</span></span>  
   
- <span data-ttu-id="def58-104">Per eseguire l'override di una routine della classe base, la routine di override deve corrispondere non solo alla firma completa della routine della classe base, ma anche al livello di accesso della routine e al meccanismo di passaggio di ogni parametro.</span><span class="sxs-lookup"><span data-stu-id="def58-104">To override a base class procedure, the overriding procedure must match not only the complete signature of the base class procedure, but also the access level of the procedure and the passing mechanism of each parameter.</span></span>  
+ <span data-ttu-id="6eb81-104">Per eseguire l'override di una routine della classe base, la routine di override deve corrispondere non solo alla firma completa della routine della classe base, ma anche al livello di accesso della routine e al meccanismo di passaggio di ogni parametro.</span><span class="sxs-lookup"><span data-stu-id="6eb81-104">To override a base class procedure, the overriding procedure must match not only the complete signature of the base class procedure, but also the access level of the procedure and the passing mechanism of each parameter.</span></span>  
   
- <span data-ttu-id="def58-105">Per eseguire l'override di una routine di classe base generica, la routine di override deve corrispondere anche al numero di parametri di tipo e all'elenco di vincoli di ciascuna di esse.</span><span class="sxs-lookup"><span data-stu-id="def58-105">To override a generic base class procedure, the overriding procedure must additionally match the number of type parameters and the constraint list of each one.</span></span>  
+ <span data-ttu-id="6eb81-105">Per eseguire l'override di una routine di classe base generica, la routine di override deve corrispondere anche al numero di parametri di tipo e all'elenco di vincoli di ciascuna di esse.</span><span class="sxs-lookup"><span data-stu-id="6eb81-105">To override a generic base class procedure, the overriding procedure must additionally match the number of type parameters and the constraint list of each one.</span></span>  
   
- <span data-ttu-id="def58-106">Per altre informazioni sui requisiti di override, vedere [Overrides](../../visual-basic/language-reference/modifiers/overrides.md).</span><span class="sxs-lookup"><span data-stu-id="def58-106">For more information on overriding requirements, see [Overrides](../../visual-basic/language-reference/modifiers/overrides.md).</span></span>  
+ <span data-ttu-id="6eb81-106">Per altre informazioni sui requisiti di override, vedere [Overrides](../language-reference/modifiers/overrides.md).</span><span class="sxs-lookup"><span data-stu-id="6eb81-106">For more information on overriding requirements, see [Overrides](../language-reference/modifiers/overrides.md).</span></span>  
   
- <span data-ttu-id="def58-107">**ID errore:** BC32077</span><span class="sxs-lookup"><span data-stu-id="def58-107">**Error ID:** BC32077</span></span>  
+ <span data-ttu-id="6eb81-107">**ID errore:** BC32077</span><span class="sxs-lookup"><span data-stu-id="6eb81-107">**Error ID:** BC32077</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="def58-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="def58-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6eb81-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6eb81-108">To correct this error</span></span>  
   
-- <span data-ttu-id="def58-109">Se si prevede di eseguire l'override della routine della casse base, verificare che i vincoli del parametro di tipo corrispondano esattamente a quelli della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="def58-109">If you intend to override the base class procedure, revise the type parameter constraints to exactly match those of the base class procedure.</span></span>  
+- <span data-ttu-id="6eb81-109">Se si prevede di eseguire l'override della routine della casse base, verificare che i vincoli del parametro di tipo corrispondano esattamente a quelli della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="6eb81-109">If you intend to override the base class procedure, revise the type parameter constraints to exactly match those of the base class procedure.</span></span>  
   
-- <span data-ttu-id="def58-110">Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile eseguire l'override della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="def58-110">If the type parameter constraints must remain as you have them, you cannot override the base class procedure.</span></span> <span data-ttu-id="def58-111">Rimuovere la parola chiave `Overrides` dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="def58-111">Remove the `Overrides` keyword from the declaration.</span></span>  
+- <span data-ttu-id="6eb81-110">Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile eseguire l'override della routine della classe base.</span><span class="sxs-lookup"><span data-stu-id="6eb81-110">If the type parameter constraints must remain as you have them, you cannot override the base class procedure.</span></span> <span data-ttu-id="6eb81-111">Rimuovere la parola chiave `Overrides` dalla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="6eb81-111">Remove the `Overrides` keyword from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="def58-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="def58-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6eb81-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6eb81-112">See also</span></span>
 
-- [<span data-ttu-id="def58-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="def58-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="6eb81-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6eb81-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
