--- a/docs/visual-basic/misc/bc32087.md
+++ b/docs/visual-basic/misc/bc32087.md
@@ -1,5 +1,5 @@
 ---
-title: Non è riuscita perché la risoluzione dell'overload non accessibile '<genericprocedurename>' accetta questo numero di argomenti tipo
+title: Risoluzione dell'overload non riuscita perché nessun '<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32087
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC32087
 ms.assetid: a3eaafd3-80f6-4b7d-9b75-47b043fe17b5
-ms.openlocfilehash: e134ce52e74b2a7ba24d7950b6827109a475a6e7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 92f70bcf4be74e6d8f2b459c7416c5d072c3b5df
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783773"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358802"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="01401-102">Non è riuscita perché la risoluzione dell'overload non accessibile '\<nomeroutinegenerica >' accetta questo numero di argomenti tipo</span><span class="sxs-lookup"><span data-stu-id="01401-102">Overload resolution failed because no accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
-<span data-ttu-id="01401-103">Una chiamata a una routine di overload generica non può essere risolta perché il compilatore non può accedere a nessuna versione di overload con il numero appropriato di parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="01401-103">A call to an overloaded generic procedure cannot be resolved because the compiler cannot access any overloaded version with the appropriate number of type parameters.</span></span>  
+# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a><span data-ttu-id="424fd-102">Risoluzione dell'overload non riuscita perché nessun '\<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="424fd-102">Overload resolution failed because no accessible '\<genericprocedurename>' accepts this number of type arguments</span></span>
+<span data-ttu-id="424fd-103">Una chiamata a una routine di overload generica non può essere risolta perché il compilatore non può accedere a nessuna versione di overload con il numero appropriato di parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="424fd-103">A call to an overloaded generic procedure cannot be resolved because the compiler cannot access any overloaded version with the appropriate number of type parameters.</span></span>  
   
- <span data-ttu-id="01401-104">Quando si chiama una routine generica, è necessario fornire un argomento di tipo per ogni parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="01401-104">When you call a generic procedure, you must supply one type argument for each type parameter.</span></span> <span data-ttu-id="01401-105">In alternativa, è possibile non fornire alcun argomento di tipo e permettere al compilatore di provare a eseguire l' *inferenza del tipo*.</span><span class="sxs-lookup"><span data-stu-id="01401-105">Alternatively, you can supply no type arguments at all and let the compiler attempt to do *type inference*.</span></span> <span data-ttu-id="01401-106">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="01401-106">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
+ <span data-ttu-id="424fd-104">Quando si chiama una routine generica, è necessario fornire un argomento di tipo per ogni parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="424fd-104">When you call a generic procedure, you must supply one type argument for each type parameter.</span></span> <span data-ttu-id="424fd-105">In alternativa, è possibile non fornire alcun argomento di tipo e permettere al compilatore di provare a eseguire l' *inferenza del tipo*.</span><span class="sxs-lookup"><span data-stu-id="424fd-105">Alternatively, you can supply no type arguments at all and let the compiler attempt to do *type inference*.</span></span> <span data-ttu-id="424fd-106">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="424fd-106">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
   
- <span data-ttu-id="01401-107">**ID errore:** BC32087</span><span class="sxs-lookup"><span data-stu-id="01401-107">**Error ID:** BC32087</span></span>  
+ <span data-ttu-id="424fd-107">**ID errore:** BC32087</span><span class="sxs-lookup"><span data-stu-id="424fd-107">**Error ID:** BC32087</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="01401-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="01401-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="424fd-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="424fd-108">To correct this error</span></span>  
   
-1. <span data-ttu-id="01401-109">Verificare che la versione che si vuole chiamare sia accessibile dal codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="01401-109">Ensure that the version you intend to call is accessible by the calling code.</span></span> <span data-ttu-id="01401-110">Vedere [Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md).</span><span class="sxs-lookup"><span data-stu-id="01401-110">See [Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md).</span></span>  
+1. <span data-ttu-id="424fd-109">Verificare che la versione che si vuole chiamare sia accessibile dal codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="424fd-109">Ensure that the version you intend to call is accessible by the calling code.</span></span> <span data-ttu-id="424fd-110">Vedere [livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md).</span><span class="sxs-lookup"><span data-stu-id="424fd-110">See [Access levels in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md).</span></span>  
   
-2. <span data-ttu-id="01401-111">Aggiungere o rimuovere gli argomenti di tipo dal codice chiamante in modo che l'elenco di argomenti di tipo corrisponda all'elenco di parametri di tipo della versione che si intende chiamare.</span><span class="sxs-lookup"><span data-stu-id="01401-111">Add or remove type arguments from your calling code so that the type argument list matches the type parameter list of the version you intend to call.</span></span>  
+2. <span data-ttu-id="424fd-111">Aggiungere o rimuovere gli argomenti di tipo dal codice chiamante in modo che l'elenco di argomenti di tipo corrisponda all'elenco di parametri di tipo della versione che si intende chiamare.</span><span class="sxs-lookup"><span data-stu-id="424fd-111">Add or remove type arguments from your calling code so that the type argument list matches the type parameter list of the version you intend to call.</span></span>  
   
-     <span data-ttu-id="01401-112">-oppure-</span><span class="sxs-lookup"><span data-stu-id="01401-112">-or-</span></span>  
+     <span data-ttu-id="424fd-112">-oppure-</span><span class="sxs-lookup"><span data-stu-id="424fd-112">-or-</span></span>  
   
-     <span data-ttu-id="01401-113">Rimuovere tutti gli argomenti di tipo dal codice chiamante e permettere al compilatore di provare a eseguire l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="01401-113">Remove all type arguments from your calling code and let the compiler attempt to do type inference.</span></span> <span data-ttu-id="01401-114">Tenere presente che l'inferenza del tipo può non riuscire se sono presenti conflitti o ambiguità.</span><span class="sxs-lookup"><span data-stu-id="01401-114">Be aware that type inference can fail if there are conflicts or ambiguities.</span></span>  
+     <span data-ttu-id="424fd-113">Rimuovere tutti gli argomenti di tipo dal codice chiamante e permettere al compilatore di provare a eseguire l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="424fd-113">Remove all type arguments from your calling code and let the compiler attempt to do type inference.</span></span> <span data-ttu-id="424fd-114">Tenere presente che l'inferenza del tipo può non riuscire se sono presenti conflitti o ambiguità.</span><span class="sxs-lookup"><span data-stu-id="424fd-114">Be aware that type inference can fail if there are conflicts or ambiguities.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="01401-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="01401-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="424fd-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="424fd-115">See also</span></span>
 
-- [<span data-ttu-id="01401-116">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="01401-116">Overloaded Properties and Methods</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
-- [<span data-ttu-id="01401-117">Risoluzione dell'overload</span><span class="sxs-lookup"><span data-stu-id="01401-117">Overload Resolution</span></span>](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
-- [<span data-ttu-id="01401-118">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="01401-118">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="01401-119">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="01401-119">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="424fd-116">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="424fd-116">Overloaded Properties and Methods</span></span>](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [<span data-ttu-id="424fd-117">Risoluzione dell'overload</span><span class="sxs-lookup"><span data-stu-id="424fd-117">Overload Resolution</span></span>](../programming-guide/language-features/procedures/overload-resolution.md)
+- [<span data-ttu-id="424fd-118">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="424fd-118">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="424fd-119">Type List</span><span class="sxs-lookup"><span data-stu-id="424fd-119">Type List</span></span>](../language-reference/statements/type-list.md)
