--- a/docs/visual-basic/misc/bc32088.md
+++ b/docs/visual-basic/misc/bc32088.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC32088
 ms.assetid: a0918e90-e7ad-4edc-81e1-584e6174bb6c
-ms.openlocfilehash: db58726973aae546f9b4d10516334173d3f4e43a
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 3e86015f607f4393770c068bfab37a662611ef29
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352238"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358724"
 ---
-# <a name="type-arguments-unexpected"></a><span data-ttu-id="8051b-102">Argomenti di tipo imprevisti</span><span class="sxs-lookup"><span data-stu-id="8051b-102">Type arguments unexpected</span></span>
-<span data-ttu-id="8051b-103">Una clausola `Implements` fornisce argomenti di tipo per il membro di interfaccia che sta implementando.</span><span class="sxs-lookup"><span data-stu-id="8051b-103">An `Implements` clause supplies type arguments for the interface member it is implementing.</span></span>  
+# <a name="type-arguments-unexpected"></a><span data-ttu-id="453bd-102">Argomenti di tipo imprevisti</span><span class="sxs-lookup"><span data-stu-id="453bd-102">Type arguments unexpected</span></span>
+<span data-ttu-id="453bd-103">Una clausola `Implements` fornisce argomenti di tipo per il membro di interfaccia che sta implementando.</span><span class="sxs-lookup"><span data-stu-id="453bd-103">An `Implements` clause supplies type arguments for the interface member it is implementing.</span></span>  
   
- <span data-ttu-id="8051b-104">La clausola `Implements` dovrebbe identificare solo l'interfaccia e il membro che sta implementando.</span><span class="sxs-lookup"><span data-stu-id="8051b-104">The `Implements` clause should only identify the interface and member it is implementing.</span></span> <span data-ttu-id="8051b-105">Ciò significa che se si sta dichiarando una routine generica, la clausola `Of` e gli argomenti di tipo dovrebbero apparire nella parte principale della dichiarazione, proprio come accadrebbe se non si stesse implementando una routine dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="8051b-105">This means that if you are declaring a generic procedure, the `Of` clause and the type arguments should appear in the main part of the declaration, just as they would if you were not implementing an interface procedure.</span></span>  
+ <span data-ttu-id="453bd-104">La clausola `Implements` dovrebbe identificare solo l'interfaccia e il membro che sta implementando.</span><span class="sxs-lookup"><span data-stu-id="453bd-104">The `Implements` clause should only identify the interface and member it is implementing.</span></span> <span data-ttu-id="453bd-105">Ciò significa che se si sta dichiarando una routine generica, la clausola `Of` e gli argomenti di tipo dovrebbero apparire nella parte principale della dichiarazione, proprio come accadrebbe se non si stesse implementando una routine dell'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="453bd-105">This means that if you are declaring a generic procedure, the `Of` clause and the type arguments should appear in the main part of the declaration, just as they would if you were not implementing an interface procedure.</span></span>  
   
- <span data-ttu-id="8051b-106">Il codice seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="8051b-106">The following code can generate this error.</span></span>  
+ <span data-ttu-id="453bd-106">Il codice seguente può generare questo errore.</span><span class="sxs-lookup"><span data-stu-id="453bd-106">The following code can generate this error.</span></span>  
   
 ```vb  
 Public Interface testInterface  
@@ -32,24 +32,24 @@ Public Class testClass
 End Class  
 ```  
   
- <span data-ttu-id="8051b-107">La dichiarazione precedente la clausola `Implements` dovrebbe essere simile alla definizione di interfaccia, tranne la possibile aggiunta di modificatori di accesso o di routine.</span><span class="sxs-lookup"><span data-stu-id="8051b-107">The declaration preceding the `Implements` clause should look like the interface definition, except for the possible addition of access or procedure modifiers.</span></span> <span data-ttu-id="8051b-108">Il codice seguente consente di evitare l'errore.</span><span class="sxs-lookup"><span data-stu-id="8051b-108">The following code avoids the error.</span></span>  
+ <span data-ttu-id="453bd-107">La dichiarazione precedente la clausola `Implements` dovrebbe essere simile alla definizione di interfaccia, tranne la possibile aggiunta di modificatori di accesso o di routine.</span><span class="sxs-lookup"><span data-stu-id="453bd-107">The declaration preceding the `Implements` clause should look like the interface definition, except for the possible addition of access or procedure modifiers.</span></span> <span data-ttu-id="453bd-108">Il codice seguente consente di evitare l'errore.</span><span class="sxs-lookup"><span data-stu-id="453bd-108">The following code avoids the error.</span></span>  
   
 ```vb  
 Public Sub testSub(Of t)() Implements testInterface.testSub  
 ```  
   
- <span data-ttu-id="8051b-109">**ID errore:** BC32088</span><span class="sxs-lookup"><span data-stu-id="8051b-109">**Error ID:** BC32088</span></span>  
+ <span data-ttu-id="453bd-109">**ID errore:** BC32088</span><span class="sxs-lookup"><span data-stu-id="453bd-109">**Error ID:** BC32088</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8051b-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8051b-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="453bd-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="453bd-110">To correct this error</span></span>  
   
-- <span data-ttu-id="8051b-111">Rimuovere l'elenco di argomenti di tipo dalla clausola `Implements` .</span><span class="sxs-lookup"><span data-stu-id="8051b-111">Remove the type argument list from the `Implements` clause.</span></span>  
+- <span data-ttu-id="453bd-111">Rimuovere l'elenco di argomenti di tipo dalla clausola `Implements` .</span><span class="sxs-lookup"><span data-stu-id="453bd-111">Remove the type argument list from the `Implements` clause.</span></span>  
   
-- <span data-ttu-id="8051b-112">Se si sta eseguendo l'implementazione di un membro generico dell'interfaccia, inserire l'elenco di argomenti di tipo nella parte principale della dichiarazione, prima della parola chiave `Implements` .</span><span class="sxs-lookup"><span data-stu-id="8051b-112">If you are implementing a generic member of the interface, then put the type argument list in the main part of the declaration, preceding the `Implements` keyword.</span></span>  
+- <span data-ttu-id="453bd-112">Se si sta eseguendo l'implementazione di un membro generico dell'interfaccia, inserire l'elenco di argomenti di tipo nella parte principale della dichiarazione, prima della parola chiave `Implements` .</span><span class="sxs-lookup"><span data-stu-id="453bd-112">If you are implementing a generic member of the interface, then put the type argument list in the main part of the declaration, preceding the `Implements` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8051b-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8051b-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="453bd-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="453bd-113">See also</span></span>
 
-- [<span data-ttu-id="8051b-114">Implements</span><span class="sxs-lookup"><span data-stu-id="8051b-114">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
+- [<span data-ttu-id="453bd-114">Implementazioni</span><span class="sxs-lookup"><span data-stu-id="453bd-114">Implements</span></span>](../language-reference/statements/implements-clause.md)
 
-- [<span data-ttu-id="8051b-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8051b-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="8051b-116">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8051b-116">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="8051b-117">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="8051b-117">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="453bd-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="453bd-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="453bd-116">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="453bd-116">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="453bd-117">Type List</span><span class="sxs-lookup"><span data-stu-id="453bd-117">Type List</span></span>](../language-reference/statements/type-list.md)
