--- a/docs/visual-basic/misc/bc42305.md
+++ b/docs/visual-basic/misc/bc42305.md
@@ -1,5 +1,5 @@
 ---
-title: Tag del commento XML '<tag>' presente più volte con attributi identici nello stesso blocco di commento XML
+title: Il tag '<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML
 ms.date: 07/20/2015
 f1_keywords:
 - bc42305
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42305
 ms.assetid: 3707a863-149f-4ce8-858f-9d78e14ad5b6
-ms.openlocfilehash: 90262dc98fdaf174bee76dbdf29e69c4aff5d5a0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f18fba76cc5f74d5b2c27958b11797c4e76c2a36
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64587848"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413531"
 ---
-# <a name="xml-comment-tag-tag-appears-with-identical-attributes-more-than-once-in-the-same-xml-comment-block"></a><span data-ttu-id="98f38-102">Tag del commento XML '\<tag >' presente più volte con attributi identici nello stesso blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="98f38-102">XML comment tag '\<tag>' appears with identical attributes more than once in the same XML comment block</span></span>
-<span data-ttu-id="98f38-103">Tag del commento XML \<tag > presente più volte con attributi identici nello stesso blocco di commento XML.</span><span class="sxs-lookup"><span data-stu-id="98f38-103">XML comment tag \<tag> appears with identical attributes more than once in the same XML comment block.</span></span> <span data-ttu-id="98f38-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="98f38-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-tag-tag-appears-with-identical-attributes-more-than-once-in-the-same-xml-comment-block"></a><span data-ttu-id="5b098-102">Il tag '\<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML</span><span class="sxs-lookup"><span data-stu-id="5b098-102">XML comment tag '\<tag>' appears with identical attributes more than once in the same XML comment block</span></span>
+<span data-ttu-id="5b098-103">Il tag del commento XML è \<tag> presente più volte con attributi identici nello stesso blocco di commento XML.</span><span class="sxs-lookup"><span data-stu-id="5b098-103">XML comment tag \<tag> appears with identical attributes more than once in the same XML comment block.</span></span> <span data-ttu-id="5b098-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="5b098-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="98f38-105">Il commento XML contiene più tag con attributi identici.</span><span class="sxs-lookup"><span data-stu-id="98f38-105">The XML comment contains more than one tag with identical attributes.</span></span>  
+ <span data-ttu-id="5b098-105">Il commento XML contiene più tag con attributi identici.</span><span class="sxs-lookup"><span data-stu-id="5b098-105">The XML comment contains more than one tag with identical attributes.</span></span>  
   
- <span data-ttu-id="98f38-106">**ID errore:** BC42305</span><span class="sxs-lookup"><span data-stu-id="98f38-106">**Error ID:** BC42305</span></span>  
+ <span data-ttu-id="5b098-106">**ID errore:** BC42305</span><span class="sxs-lookup"><span data-stu-id="5b098-106">**Error ID:** BC42305</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="98f38-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="98f38-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5b098-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5b098-107">To correct this error</span></span>  
   
-- <span data-ttu-id="98f38-108">Rimuovere i tag duplicati.</span><span class="sxs-lookup"><span data-stu-id="98f38-108">Remove the duplicate tag.</span></span>  
+- <span data-ttu-id="5b098-108">Rimuovere i tag duplicati.</span><span class="sxs-lookup"><span data-stu-id="5b098-108">Remove the duplicate tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="98f38-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="98f38-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5b098-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5b098-109">See also</span></span>
 
-- [<span data-ttu-id="98f38-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="98f38-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="98f38-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="98f38-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="5b098-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="5b098-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="5b098-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="5b098-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
