--- a/docs/visual-basic/misc/bc42306.md
+++ b/docs/visual-basic/misc/bc42306.md
@@ -1,5 +1,5 @@
 ---
-title: Tag del commento XML '<tag>' non è consentito in un '<element>' elemento di linguaggio
+title: Il tag del commento XML <tag> non è consentito in un elemento di linguaggio '<element>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42306
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42306
 ms.assetid: 12846822-0609-4298-a8b2-b022abfa3765
-ms.openlocfilehash: 9781b5adebea41fed5d9bbdbdca5951e6615ea5c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a43de60aa1c088a3f09ec1d6a7e4d5e7d5f5067f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604358"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413518"
 ---
-# <a name="xml-comment-tag-tag-is-not-permitted-on-a-element-language-element"></a><span data-ttu-id="61840-102">Tag del commento XML '\<tag >' non è consentito in un '\<elemento >' elemento di linguaggio</span><span class="sxs-lookup"><span data-stu-id="61840-102">XML comment tag '\<tag>' is not permitted on a '\<element>' language element</span></span>
-<span data-ttu-id="61840-103">Tag del commento XML \<tag > non è consentito in un '\<elemento >' elemento.</span><span class="sxs-lookup"><span data-stu-id="61840-103">XML comment tag \<tag> is not permitted on a '\<element>' element.</span></span> <span data-ttu-id="61840-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="61840-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-tag-tag-is-not-permitted-on-a-element-language-element"></a><span data-ttu-id="c3306-102">Il tag del commento XML \<tag> non è consentito in un elemento di linguaggio '\<element>'</span><span class="sxs-lookup"><span data-stu-id="c3306-102">XML comment tag '\<tag>' is not permitted on a '\<element>' language element</span></span>
+<span data-ttu-id="c3306-103">Il tag del commento XML \<tag> non è consentito in un \<element> elemento ''.</span><span class="sxs-lookup"><span data-stu-id="c3306-103">XML comment tag \<tag> is not permitted on a '\<element>' element.</span></span> <span data-ttu-id="c3306-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="c3306-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="61840-105">Un tag di commento XML non è supportato dall'elemento di linguaggio al quale viene applicato.</span><span class="sxs-lookup"><span data-stu-id="61840-105">An XML comment tag is not supported by the language element to which it is applied.</span></span>  
+ <span data-ttu-id="c3306-105">Un tag di commento XML non è supportato dall'elemento di linguaggio al quale viene applicato.</span><span class="sxs-lookup"><span data-stu-id="c3306-105">An XML comment tag is not supported by the language element to which it is applied.</span></span>  
   
- <span data-ttu-id="61840-106">**ID errore:** BC42306</span><span class="sxs-lookup"><span data-stu-id="61840-106">**Error ID:** BC42306</span></span>  
+ <span data-ttu-id="c3306-106">**ID errore:** BC42306</span><span class="sxs-lookup"><span data-stu-id="c3306-106">**Error ID:** BC42306</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="61840-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="61840-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c3306-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c3306-107">To correct this error</span></span>  
   
-- <span data-ttu-id="61840-108">Rimuovere il tag di commento XML non supportato.</span><span class="sxs-lookup"><span data-stu-id="61840-108">Remove the unsupported XML comment tag.</span></span>  
+- <span data-ttu-id="c3306-108">Rimuovere il tag di commento XML non supportato.</span><span class="sxs-lookup"><span data-stu-id="c3306-108">Remove the unsupported XML comment tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="61840-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="61840-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c3306-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c3306-109">See also</span></span>
 
-- [<span data-ttu-id="61840-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="61840-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="61840-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="61840-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="c3306-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="c3306-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="c3306-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="c3306-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
